--- a/Swift Documentation/2.Language Guide/4.Collection Types.md
+++ b/Swift Documentation/2.Language Guide/4.Collection Types.md
@@ -557,11 +557,39 @@ for genre in favoriteGenres.sorted() {
 
 ### 기본 집합 연산 (Fundamental Set Operations)
 
+아래 그림은 두 집합 `a` 와 `b` 의 여러가지 집합 연산에 대한 결과를 보여줍니다.
+
+<img width="600" src="https://github.com/Developer-Nova/Swift-Documentation/assets/123448121/a859232e-1ea2-4149-aedf-b3d4ca0222c0">
+
+- `intersection(_:)` 메서드를 사용하면 두 집합의 공통된 값을 사용하여 새로운 집합을 생성합니다.
+  
+- `symmetricDifference(_:)` 메서드를 사용하면 두 집합의 공통된 값을 제외한 값으로 새로운 집합을 생성합니다.
+  
+- `union(_:)` 메서드를 사용하면 두 집합의 모든 값을 사용하여 새로운 집합을 생성합니다.
+  
+- `subtracting(_:)` 메서드를 사용하면 특정 집합의 공통된 값을 제외한 새로운 집합을 생성합니다.
+
+~~~ swift
+let oddDigits: Set = [1, 3, 5, 7, 9]
+let evenDigits: Set = [0, 2, 4, 6, 8]
+let singleDigitPrimeNumbers: Set = [2, 3, 5, 7]
 
 
+oddDigits.union(evenDigits).sorted()
+// [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
+oddDigits.intersection(evenDigits).sorted()
+// []
+oddDigits.subtracting(singleDigitPrimeNumbers).sorted()
+// [1, 9]
+oddDigits.symmetricDifference(singleDigitPrimeNumbers).sorted()
+// [1, 2, 9]
+~~~
 
+<br>
 
+### 집합 멤버쉽 및 동등성 (Set Membership and Equality)
 
+아래 그림은 
 
 
 
