--- a/Swift Documentation/2.Language Guide/4.Collection Types.md
+++ b/Swift Documentation/2.Language Guide/4.Collection Types.md
@@ -589,8 +589,45 @@ oddDigits.symmetricDifference(singleDigitPrimeNumbers).sorted()
 
 ### 집합 멤버쉽 및 동등성 (Set Membership and Equality)
 
-아래 그림은 
+아래 그림은 세 집합 `a`, `b`, `c` 를 나타내며 집합의 공통 요소는 겹쳐서 표현하고 있습니다.
 
+집합 `a` 는 집합 `b` 의 모든 요소를 포함하므로 집합 `a` 는 `b` 의 상위 집합 (superset) 이라 합니다.
+
+반대로 `b` 의 모든 요소가 `a` 에 포함되어 있으므로 집합 `b` 는 집합 `a` 의 하위 집합 (subset) 이라 합니다.
+
+집합 `b` 와 집합 `c` 는 공통 요소가 없으므로 분리집합 (disjoint) 이라 합니다.
+
+<img width="600" src="https://github.com/Developer-Nova/Swift-Documentation/assets/123448121/705d95e7-0a01-4f4c-9b03-e1a865682a97">
+
+- 두 집합이 동일한 값을 모두 포함하고 있는지 확인하려면 "같음" 연산자 (`==`) 를 사용합니다.
+
+- `isSubset(of:)` 메서드를 사용하여 집합의 모든 값이 특정 집합에 포함되어 있는지 확인합니다.
+
+- `isSuperset(of:)` 메서드를 사용하여 집합에 특정 집합의 모든 값이 포함되어 있는지 확인합니다.
+
+- `isStrictSubset(of:)` 또는 `isStrictSuperset(of:)` 메서드를 사용하여 집합이 특정 집합과 같지 않고, 부분집합인지 상위집합인지 확인합니다.
+
+- `isDisjoint(with:)` 메서드를 사용하여 두 집합에 공통된 값이 없는지 확인합니다.
+
+~~~ swift
+let houseAnimals: Set = ["🐶", "🐱"]
+let farmAnimals: Set = ["🐮", "🐔", "🐑", "🐶", "🐱"]
+let cityAnimals: Set = ["🐦", "🐭"]
+
+
+houseAnimals.isSubset(of: farmAnimals)
+// true
+farmAnimals.isSuperset(of: houseAnimals)
+// true
+farmAnimals.isDisjoint(with: cityAnimals)
+// true
+~~~
+
+<br>
+
+## 딕셔너리 (Dictionaries)
+
+딕셔너리 (dictionary) 는 순서와 상관없이 컬렉션에 동일한 타입의 키 (key) 와 동일한 타입의 값 (value) 간의 연관성을 저장합니다.
 
 
 
