--- a/Swift Documentation/2.Language Guide/4.Collection Types.md
+++ b/Swift Documentation/2.Language Guide/4.Collection Types.md
@@ -629,6 +629,33 @@ farmAnimals.isDisjoint(with: cityAnimals)
 
 딕셔너리 (dictionary) 는 순서와 상관없이 컬렉션에 동일한 타입의 키 (key) 와 동일한 타입의 값 (value) 간의 연관성을 저장합니다.
 
+각 값은 딕셔너리 내부에서 해당 값의 식별자 역할을 하는 고유한 키와 연결됩니다.
+
+배열의 항목과 다르게 딕셔너리의 항목은 특정 순서를 가지고 있지 않습니다.
+
+실제 사전을 사용하여 특정 단어의 정의를 찾는 방법과 같이 식별자를 기준으로 값을 찾아야 할 때 딕셔너리를 사용합니다.
+
+> Note    
+> Swift 의 `Dictionary` 타입은 Foundation 의 `NSDictionary` 클래스와 연결됩니다.
+> Foundation 과 Cocoa 에서 `Dictionary` 사용에 대한 자세한 내용은 [Dictionary 와 NSDictionary 의 연결 (Bridging Between Dictionary and NSDictionary)]() 를 참조하세요.
+
+<br>
+
+### 딕셔너리 타입 단축 구문 (Dictionary Type Shorthand Syntax)
+
+Swift 딕셔너리 타입은 `Dictionary<Key, Value>` 로 작성되며 `Key` 는 딕셔너리 키로 사용되는 값의 타입이고 `Value` 는 해당 키에 대해 딕셔너리가 저장하는 값의 타입입니다.
+
+> Note    
+> 딕셔너리 `Key` 타입은 집합의 값 타입과 같이 반드시 `Hashable` 프로토콜을 준수해야 합니다.
+
+`[Key: Value]` 와 같이 단축 형식으로 딕셔너리 타입을 작성할 수도 있습니다.
+
+두 타입은 기능적으로 동일하지만 단축 형식이 선호되며 이 가이드 전체에서 사용됩니다.
+
+<br>
+
+### 빈 딕셔너리 생성 (Creating an Empty Dictionary)
+
 
 
 
