--- a/Swift Documentation/2.Language Guide/4.Collection Types.md
+++ b/Swift Documentation/2.Language Guide/4.Collection Types.md
@@ -656,11 +656,62 @@ Swift 딕셔너리 타입은 `Dictionary<Key, Value>` 로 작성되며 `Key` 는
 
 ### 빈 딕셔너리 생성 (Creating an Empty Dictionary)
 
+배열과 마찬가지로 초기화 구문을 사용하여 특정 타입의 빈 `Dictionary` 를 생성할 수 있습니다.
 
+~~~ swift
+var namesOfIntegers: [Int: String] = [:]
+// namesOfIntegers is an empty [Int: String] dictionary
+~~~
 
+이 예제에서는 사람이 읽을 수 있는 정수값 이름을 저장하는 `[Int: String]` 타입의 빈 딕셔너리를 생성합니다.
 
+해당 키는 `Int` 타입이고 값은 `String` 타입 입니다.
 
+#
 
+컨텍스트가 이미 타입 정보를 제공하는 경우 `[:]` (대괄호 안에 콜론 포함) 와 같이 작성하여 빈 딕셔너리 리터럴을 사용하여 빈 딕셔너리를 생성할 수 있습니다.
+
+~~~ swift
+namesOfIntegers[16] = "sixteen"
+// namesOfIntegers now contains 1 key-value pair
+namesOfIntegers = [:]
+// namesOfIntegers is once again an empty dictionary of type [Int: String]
+~~~
+
+<br>
+
+### 딕셔너리 리터럴을 사용하여 딕셔너리 생성 (Creating a Dictionary with a Dictionary Literal)
+
+앞서 본 배열 리터럴과 비슷한 구문을 가진 딕셔너리 리터럴 (dictionary literal) 을 사용하여 딕셔너리를 초기화할 수도 있습니다.
+
+딕셔너리 리터럴은 하나 이상의 키-값 쌍을 `Dictionary` 컬렉션으로 작성하는 간단한 방법입니다.
+
+#
+
+키-값 쌍은 키와 값의 결합입니다.
+
+딕셔너리 리터럴에서 각 키-값 쌍의 키 와 값은 콜론으로 구분됩니다.
+
+키-값 쌍은 콤마로 구분하고 대괄호로 둘러싸 리스트 형식으로 작성됩니다.
+
+~~~ swift
+[<#key 1#>: <#value 1#>, <#key 2#>: <#value 2#>, <#key 3#>: <#value 3#>]
+~~~
+
+#
+
+아래 예제는 국제 공항의 이름을 저장하는 딕셔너리를 생성합니다.
+
+딕셔너리에 키는 3글자로 된 국제 항공 운송 협회 (Air Transport Association) 코드이고 값은 공항 이름입니다.
+
+~~~ swift
+var airports: [String: String] = ["YYZ": "Toronto Pearson", "DUB": "Dublin"]
+~~~
+
+`airports` 딕셔너리의 `Dictionary` 키는 `String` 타입이고 값 또한 `String` 타입인 `[Stirng: String]` 타입을 갖도록 선언됩니다.
+
+> Note    
+> `airports` 딕셔너리는 아래 예제에서 더 많은 공항이 추가되므로 상수 (`let`) 가 아닌 변수 (`var`) 로 선언됩니다.
 
 
 
