--- a/Swift Documentation/2.Language Guide/4.Collection Types.md
+++ b/Swift Documentation/2.Language Guide/4.Collection Types.md
@@ -713,7 +713,46 @@ var airports: [String: String] = ["YYZ": "Toronto Pearson", "DUB": "Dublin"]
 > Note    
 > `airports` 딕셔너리는 아래 예제에서 더 많은 공항이 추가되므로 상수 (`let`) 가 아닌 변수 (`var`) 로 선언됩니다.
 
+#
 
+`airports` 딕셔너리는 2개의 키-값 쌍을 포함한 딕셔너리 리터럴로 초기화 됩니다.
+
+첫번째 쌍은 `"YYZ"` 의 키와 `"Toronto Pearson"` 값을 가집니다.
+
+두번째 쌍은 `"DUB"` 의 키와 `"Dublin"` 값을 가집니다.
+
+#
+
+해당 딕셔너리 리터럴에는 2개의 `Stirng: String` 쌍이 포함되어 있습니다.
+
+키-값 타입은 `airports` 변수 선언 (해당 딕셔너리는 `String` 타입 키와 `String` 타입 값만 가능) 타입과 동일하며 `airports` 딕셔너리에 2개의 초기 항목을 포함하여 초기화하는 것이 가능합니다.
+
+#
+
+배열과 마찬가지로 키와 값이 일관된 타입을 갖는 딕셔너리 리터럴로 초기화하는 경우 딕셔너리의 타입을 작성할 필요가 없습니다.
+
+때문에 `airports` 의 초기화는 더 짧은 형식으로 작성할 수도 있습니다.
+
+~~~ swift
+var airports = ["YYZ": "Toronto Pearson", "DUB": "Dublin"]
+~~~
+
+리터럴 안에 모든 키와 값이 각각 동일한 타입이기 때문에 Swift 는 `airports` 딕셔너리를 사용하기 위해 `[String: String]` 이 올바른 타입이라고 추론할 수 있습니다.
+
+<br>
+
+### 딕셔너리 접근 및 수정 (Accessing and Modifying a Dictionary)
+
+해당 메서드와 프로퍼티 또는 서브 스크립트 구문을 사용하여 딕셔너리에 접근과 수정이 가능합니다.
+
+#
+
+배열과 마찬가지로 읽기 전용 `count` 프로퍼티로 `Dictionary` 에 항목의 갯수를 확인할 수 있습니다.
+
+~~~ swift
+print("The airports dictionary contains \(airports.count) items.")
+// Prints "The airports dictionary contains 2 items."
+~~~
 
 
 
