--- a/Swift Documentation/2.Language Guide/4.Collection Types.md
+++ b/Swift Documentation/2.Language Guide/4.Collection Types.md
@@ -754,30 +754,164 @@ print("The airports dictionary contains \(airports.count) items.")
 // Prints "The airports dictionary contains 2 items."
 ~~~
 
+#
+
+`count` 프로퍼티가 `0` 과 같은지 다른지 부울 값인 `isEmpty` 프로퍼티를 사용하여 확인할 수 있습니다.
+
+~~~ swift
+if airports.isEmpty {
+    print("The airports dictionary is empty.")
+} else {
+    print("The airports dictionary isn't empty.")
+}
+// Prints "The airports dictionary isn't empty."
+~~~
+
+#
+
+서브 스크립트 구문을 사용하여 딕셔너리에 새 항목을 추가할 수 있습니다.
+
+적절한 타입의 새 키를 서브 스크립트 인덱스로 사용하고 적절한 타입의 새 값을 할당합니다.
+
+~~~ swift
+airports["LHR"] = "London"
+// the airports dictionary now contains 3 items
+~~~
+
+#
+
+서브 스크립트 구문을 사용하여 특정 키와 관련된 값을 변경할 수도 있습니다.
+
+~~~ swift
+airports["LHR"] = "London Heathrow"
+// the value for "LHR" has been changed to "London Heathrow"
+~~~
+
+#
+
+서브 스크립트 대신 딕셔너리의 `updateValue(_:forKey:)` 메서드를 사용하여 특정 키의 값을 설정하거나 업데이트할 수 있습니다.
+
+위의 서브 스크립트 예제와 마찬가지로 `updateValue(_:forKey:)` 메서드는 키가 없는 경우 키 값을 설정하고 해당 키가 이미 있는 경우 값을 업데이트 합니다.
+
+그러나 서브 스크립트와 다르게 `updateValue(_:forKey:)` 메서드는 업데이트를 수행한 후 이전 값을 반환합니다.
+
+이를 통해 업데이트가 발생했는지 여부를 확인할 수 있습니다.
+
+#
+
+`updateValue(_:forKey:)` 메서드는 딕셔너리의 값 타입의 옵셔널 값을 반환합니다.
+
+예를 들어 딕셔너리에 `String` 값을 저장하면 `String?` 타입 또는 "옵셔널 `String`" 값을 반환합니다.
+
+이 옵셔널 값에는 해당 키에 존재한 업데이트 전에 값 또는 존재한 값이 없었을 때는 `nil` 을 포함합니다.
+
+~~~ swift
+if let oldValue = airports.updateValue("Dublin Airport", forKey: "DUB") {
+    print("The old value for DUB was \(oldValue).")
+}
+// Prints "The old value for DUB was Dublin."
+~~~
+
+#
+
+또한 특정 키로 딕셔너리에 값을 가져올 때 서브 스크립트 구문을 사용할 수도 있습니다.
+
+값이 존재하지 않는 키를 요청하는 것이 가능하기 때문에 딕셔너리의 서브 스크립트는 딕셔너리의 값 타입의 옵셔널 값을 반환합니다.
+
+딕셔너리에 요청된 키의 값이 있는 경우 서브 스크립트는 기존 값의 옵셔널 값을 반환합니다.
+
+그렇지 않으면 서브 스크립트는 `nil` 을 반환합니다.
+
+~~~ swift
+if let airportName = airports["DUB"] {
+    print("The name of the airport is \(airportName).")
+} else {
+    print("That airport isn't in the airports dictionary.")
+}
+// Prints "The name of the airport is Dublin Airport."
+~~~
+
+#
+
+딕셔너리의 해당 키에 `nil` 값을 할당하여 키-값 쌍을 서브 스크립트 구문을 사용하여 삭제할 수 있습니다.
+
+~~~ swift
+airports["APL"] = "Apple International"
+// "Apple International" isn't the real airport for APL, so delete it
+airports["APL"] = nil
+// APL has now been removed from the dictionary
+~~~
+
+#
+
+또는 딕셔너리에 `removeValue(forKey:)` 메서드를 사용하여 키-값 쌍을 제거할 수 있습니다.
+
+이 메서드는 키-값 쌍이 존재하는 경우 제거하고 제거된 값을 반환하거나 값이 존재하지 않는 경우 `nil` 을 반환합니다.
+
+~~~ swift
+if let removedValue = airports.removeValue(forKey: "DUB") {
+    print("The removed airport's name is \(removedValue).")
+} else {
+    print("The airports dictionary doesn't contain a value for DUB.")
+}
+// Prints "The removed airport's name is Dublin Airport."
+~~~
+
+<br>
+
+### 딕셔너리 반복 (Iterating Over a Dictionary)
+
+`for-in` 루프를 사용하여 딕셔너리의 키-값 쌍을 반복할 수 있습니다.
+
+딕셔너리의 각 항목은 `(key, value)` 튜플로 반환되고 튜플의 멤버를 임시 상수 또는 변수로 분리할 수 있습니다.
+
+~~~ swift
+for (airportCode, airportName) in airports {
+    print("\(airportCode): \(airportName)")
+}
+// LHR: London Heathrow
+// YYZ: Toronto Pearson
+~~~
+
+`for-in` 루프에 대한 자세한 내용은 [For-In 루프 (For-In Loops)]() 를 참조하세요.
+
+#
+
+딕셔너리의 `keys` 와 `values` 프로퍼티에 접근하여 딕셔너리의 키 또는 값의 반복 가능한 컬렉션을 가져올 수도 있습니다.
+
+~~~ swift
+for airportCode in airports.keys {
+    print("Airport code: \(airportCode)")
+}
+// Airport code: LHR
+// Airport code: YYZ
 
 
+for airportName in airports.values {
+    print("Airport name: \(airportName)")
+}
+// Airport name: London Heathrow
+// Airport name: Toronto Pearson
+~~~
+
+#
+
+`Array` 인스턴스를 사용하는 API 와 함께 딕셔너리의 키 또는 값을 사용해야 하는 경우 `keys` 또는 `values` 프로퍼티로 새로운 배열을 초기화 하십시오.
+
+~~~ swift
+let airportCodes = [String](airports.keys)
+// airportCodes is ["LHR", "YYZ"]
 
 
+let airportNames = [String](airports.values)
+// airportNames is ["London Heathrow", "Toronto Pearson"]
+~~~
 
+#
 
+Swift 의 `Dictionary` 타입은 정의된 순서가 없습니다.
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+특정 순서로 딕셔너리의 키 또는 값을 반복하려면 `keys` 또는 `values` 프로퍼티에 `sorted()` 메서드를 사용하세요.
 
 ***
 
