--- a/Swift Documentation/2.Language Guide/5.Control Flow.md
+++ b/Swift Documentation/2.Language Guide/5.Control Flow.md
@@ -2,6 +2,29 @@
 
 분기, 루프, 조기 종료가 포함된 코드를 구성합니다.
 
+Swift 는 다양한 제어 흐름 (control flow) 구문을 제공합니다.
+
+여기에는 여러번 작업을 수행하는 `while` 루프가 포함됩니다.
+
+`if`, `guard`, `switch` 문은 특정 조건에 따라 다양한 코드 분기를 실행합니다.
+
+실행 플로우를 코드의 다른 지점으로 전달하는 `break` 와 `continue` 를 포함합니다.
+
+Swift 는 배열, 딕셔너리, 범위, 문자열 그리고 기타 시퀀스를 쉽게 반복할 수 있는 `for-in` 루프를 제공합니다.
+
+Swift 는 또한 현재 범위를 벗어날 때 실행될 코드를 래핑하는 `defer` 명령문을 제공합니다.
+
+#
+
+Swift 의 `switch` 구문은 C 와 같은 언어들의 구문보다 훨씬 더 강력합니다.
+
+케이스는 간격 매치, 튜플, 그리고 특정 타입으로의 캐스트를 포함하여 다양한 패턴과 비교할 수 있습니다.
+
+`switch` 케이스에서 매치된 값은 케이스 문 안에서 사용하기 위해 임시 상수 또는 변수에 바인딩될 수 있으며 복잡한 매칭 조건은 각 케이스에 대한 `where` 절로 표현될 수 있습니다.
+
+<br>
+
+## For-In 루프 (For-In Loops)
 
 
 
