--- a/Swift Documentation/2.Language Guide/5.Control Flow.md
+++ b/Swift Documentation/2.Language Guide/5.Control Flow.md
@@ -115,8 +115,20 @@ print("\(base) to the power of \(power) is \(answer)")
 // Prints "3 to the power of 10 is 59049"
 ~~~
 
+위의 예제에서는 한 숫자의 값을 다른 숫자의 제곱으로 계산합니다. (이 경우 `3` 에서 `10` 제곱)
+
+`1` 로 시작하고 `10` 으로 끝나는 폐쇄 범위를 사용하여 시작 값 `1` (즉 `3` 의 `0` 제곱) 에 `3` 을 `10` 번 곱합니다.
+
+이 계산에서 루프의 각 카운터 값이 필요하지 않습니다.
+
+코드는 단순히 루프를 올바른 횟수만큼 실행합니다.
+
+루프 변수 위치에 사용된 언더바 문자 (`_`) 는 각 값을 무시하고 루프가 반복될 때마다 현재 값에 접근할 수 없습니다.
+
+#
 
 
+ 
 
 
 
