--- a/Swift Documentation/2.Language Guide/5.Control Flow.md
+++ b/Swift Documentation/2.Language Guide/5.Control Flow.md
@@ -127,9 +127,55 @@ print("\(base) to the power of \(power) is \(answer)")
 
 #
 
+어떤 상황에서는 양 끝점을 포함하는 폐쇄 범위를 사용하지 않을 수도 있습니다.
 
- 
+시계 화면에 매 분마다 눈금을 그리는 것을 생각해 봅시다.
 
+`0` 분을 시작으로 `60` 개의 눈금을 그려야 합니다.
+
+이런 경우 반열림 범위 연산자 (`..<`) 를 사용하여 가장 최소 값은 포함하지만 최대 값은 포함되지 않게 사용할 수 있습니다.
+
+범위에 대한 자세한 내용은 [범위 연산자 (Range Operators)]() 를 참조하세요.
+
+~~~ swift
+let minutes = 60
+for tickMark in 0..<minutes {
+    // render the tick mark each minute (60 times)
+}
+~~~
+
+일부 사용자는 UI 에 더 적은 눈금을 원할 수도 있습니다.
+
+매 5분마다 눈금을 그리는 것을 원할 수 있습니다.
+
+원하지 않는 눈금을 건너뛰기 위해 `stride(from:to:by:)` 함수를 사용할 수 있습니다.
+
+~~~ swift
+let minuteInterval = 5
+for tickMark in stride(from: 0, to: minutes, by: minuteInterval) {
+    // render the tick mark every 5 minutes (0, 5, 10, 15 ... 45, 50, 55)
+}
+~~~
+
+#
+
+`stride(from:through:by:)` 함수를 사용하여 폐쇄 범위도 사용할 수 있습니다.
+
+~~~ swift
+let hours = 12
+let hourInterval = 3
+for tickMark in stride(from: 3, through: hours, by: hourInterval) {
+    // render the tick mark every 3 hours (3, 6, 9, 12)
+}
+~~~
+
+위의 예제에서는 범위, 배열, 딕셔너리, 그리고 문자열을 조회하기 위해 `for-in` 루프를 사용합니다.
+
+이 구문을 사용하면 해당 타입이 [Sequence]() 프로토콜을 준수하는 한 자체 클래스 및 컬렉션 타입을 포함하여 모든 컬렉션을 반복할 수 있습니다.
+
+<br>
+
+## While 루프 (While Loops)
 
 
 
