--- a/Swift Documentation/2.Language Guide/5.Control Flow.md
+++ b/Swift Documentation/2.Language Guide/5.Control Flow.md
@@ -177,6 +177,20 @@ for tickMark in stride(from: 3, through: hours, by: hourInterval) {
 
 ## While 루프 (While Loops)
 
+`while` 루프는 조건이 `false` 가 될 때까지 명령문을 수행합니다.
+
+이러한 종류의 루프는 첫번째 반복이 시작되기 전에 반복 횟수를 알 수 없을때 가장 잘 사용됩니다.
+
+Swift 는 두 종류의 `while` 루프를 제공합니다.
+
+- `while` 은 루프가 시작할 때 마다 조건을 비교합니다.
+
+- `repeat-while` 은 루프가 끝날 때 마다 조건을 비교합니다.
+
+<br>
+
+### While
+
 
 
 
