--- a/Swift Documentation/2.Language Guide/5.Control Flow.md
+++ b/Swift Documentation/2.Language Guide/5.Control Flow.md
@@ -191,6 +191,126 @@ Swift 는 두 종류의 `while` 루프를 제공합니다.
 
 ### While
 
+`while` 루프는 단일 조건의 평가로 시작합니다.
+
+조건이 `true` 이면 조건이 `false` 가 될 때까지 일련의 명령문이 반복됩니다.
+
+#
+
+`while` 루프의 일반적인 형태는 다음과 같습니다.
+
+~~~ swift
+while <#condition#> {
+   <#statements#>
+}
+~~~
+
+#
+
+이 예제에서는 Snakes and Ladders (또는 Chutes and Ladders) 게임을 플레이 합니다.
+
+<img width="630" src="https://github.com/Developer-Nova/Swift-Documentation/assets/123448121/50355458-2190-44db-ba38-4c7690943006">
+
+게임의 규칙은 아래와 같습니다.
+
+- 보드에는 25개의 정사각형이 있으며, 목표는 25번째 정사각형 위나 넘는 것입니다.
+- 플레이어의 시작 정사각형은 보드의 왼쪽 하단 모서리 바로 옆에 있는 "0번 사각형" 입니다.
+- 매 턴마다 6면체 주사위를 굴리고 위의 점선 화살표로 표시된 수평 경로를 따라 각 숫자만큼 정사각형을 이동합니다.
+- 자신의 차례가 사다리 맨 아래에서 끝나면 해당 사다리 위로 올라갑니다.
+- 자신의 차례가 뱀의 머리에서 끝나면 그 뱀 아래로 이동합니다.
+
+#
+
+게임 보드는 `Int` 값의 배열로 표현됩니다.
+
+크기는 `finalSquare` 라는 상수를 기반으로 하며 배열을 초기화하고 예제 뒷부분에서 승리 조건을 확인하는데 사용됩니다.
+
+"사각형 0" 에서 플레이어는 시작하기 때문에 보드는 0 (`Int`) 값을 포함하여 25가 아닌 26의 크기로 초기화 됩니다.
+
+~~~ swift
+let finalSquare = 25
+var board = [Int](repeating: 0, count: finalSquare + 1)
+~~~
+
+#
+
+그런 다음 일부 사각형은 뱀과 사다리에 대해 더 구체적인 값을 갖도록 설정됩니다.
+
+사다리의 바닥이 있는 사각형은 보드 위로 이동하는 양수를 가지고 있고 뱀머리가 있는 사각형은 보드 아래로 이동하는 음수를 가지고 있습니다.
+
+~~~ swift
+board[03] = +08; board[06] = +11; board[09] = +09; board[10] = +02
+board[14] = -10; board[19] = -11; board[22] = -02; board[24] = -08
+~~~
+
+정사각형 3은 정사각형 11로 이동하는 사다리의 바닥이 포함되어 있습니다.
+
+이를 표현하기 위해 `board[03]` 은 정수값 `8` (`3` 과 `11` 의 차이) 과 같은 `+08` 을 할당합니다.
+
+값과 명령문을 정렬하기 위해 단항 덧셈 연산자 (`+i`) 는 단항 빼기 연산자 (`-i`) 와 함께 명시적으로 사용되며 10보다 작은 숫자는 앞에 0을 채웁니다.
+
+(두 스타일 기법 모두 반드시 필요한 것은 아니지만 코드가 더 깔끔해 집니다.)
+
+~~~ swift
+var square = 0
+var diceRoll = 0
+while square < finalSquare {
+    // roll the dice
+    diceRoll += 1
+    if diceRoll == 7 { diceRoll = 1 }
+    // move by the rolled amount
+    square += diceRoll
+    if square < board.count {
+        // if we're still on the board, move up or down for a snake or a ladder
+        square += board[square]
+    }
+}
+print("Game over!")
+~~~
+
+위의 예제에서는 주사위 굴리기에 대한 매우 간단한 접근 방식을 사용합니다.
+
+난수를 생성하는 대신 `diceRoll` 은 `0` 값 으로 시작합니다.
+
+`while` 루프를 통과할 때마다 `diceRoll` 은 1씩 증가하고 너무 커졌는지 확인합니다.
+
+반환된 값이 `7` 과 같을 때마다 주사위 굴림이 너무 커지므로 `1` 로 재설정 합니다.
+
+그 결과 `diceRoll` 값은 항상 `1`, `2`, `3`, `4`, `5`, `6`, `1`, `2` 등의 값 시퀀스 입니다. 
+
+#
+
+주사위를 굴린 후 플레이어는 `diceRoll` 만큼 정사각형 앞으로 이동합니다.
+
+주사위 굴림으로 인해 플레이어가 정사각형 25칸을 넘어 이동했을 수도 있으며 이 경우 게임이 종료됩니다.
+
+이 시나리오에 대처하기 위해 `board` 배열의 `count` 프로퍼티가 `square` 보다 작은지 확인합니다.
+
+`square` 가 유효한 경우 `board[square]` 에 저장된 값은 현재 `square` 값이 추가되어 플레이어를 이동합니다.
+
+> Note    
+> 해당 검사를 수행하지 않으면 `board[square]` 는 `board` 배열의 범위를 넘는 값을 접근하려 시도할 수 있습니다.
+> 이런 경우 런타임 에러가 발생할 수 있습니다.
+
+<br>
+
+### Repeat-While
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
