--- a/Swift Documentation/2.Language Guide/5.Control Flow.md
+++ b/Swift Documentation/2.Language Guide/5.Control Flow.md
@@ -296,7 +296,82 @@ print("Game over!")
 
 ### Repeat-While
 
+`while` 루프의 다른 하나는 루프의 조건을 판단하기 전에 루프 블럭을 처음에 한번 먼저 통과하는 `repeat-while` 루프가 있습니다.
 
+조건이 `false` 가 될 때까지 루프를 반복합니다.
+
+> Note    
+> Swift 에 `repeat-while` 루프는 다른 언어의 `do-while` 루프와 유사합니다.
+
+#
+
+`repeat-while` 루프의 일반적인 형태는 다음과 같습니다.
+
+~~~ swift
+repeat {
+   <#statements#>
+} while <#condition#>
+~~~
+
+#
+
+Snakes and Ladders 예제에서 `while` 루프보다 `repeat-while` 루프를 쓰는 것이 더 좋습니다.
+
+`finalSquare`, `board`, `square`, `diceRoll` 의 값은 `while` 루프에서와 같은 방식으로 초기화 됩니다.
+
+~~~ swift
+let finalSquare = 25
+var board = [Int](repeating: 0, count: finalSquare + 1)
+board[03] = +08; board[06] = +11; board[09] = +09; board[10] = +02
+board[14] = -10; board[19] = -11; board[22] = -02; board[24] = -08
+var square = 0
+var diceRoll = 0
+~~~
+
+#
+
+이 버전의 게임에서 루프의 첫번째 작업은 사다리 또는 뱀이 있는지 확인하는 것입니다.
+
+보드에 사다리가 없으면 플레이어는 바로 정사각형 25로 이동하기 때문에 사다리를 올라가서 게임에서 승리하는 것은 불가능합니다.
+
+따라서 루프의 첫번째 작업으로 뱀이나 사다리가 있는지 확인하는 것이 안전합니다.
+
+#
+
+게임이 시작될 때 플레이어는 "0번 사각형" 에 있습니다.
+
+`board[0]` 은 항상 `0` 과 같으며 영향이 없습니다.
+
+~~~ swift
+repeat {
+    // move up or down for a snake or ladder
+    square += board[square]
+    // roll the dice
+    diceRoll += 1
+    if diceRoll == 7 { diceRoll = 1 }
+    // move by the rolled amount
+    square += diceRoll
+} while square < finalSquare
+print("Game over!")
+~~~
+
+코드가 뱀과 사다리를 확인 후 주사위를 굴리고 플레이어는 `diceRoll` 만큼 사각형 앞으로 이동합니다.
+
+그런 다음 현재 루프는 종료됩니다.
+
+#
+
+루프의 조건 (`while square < finalSquare`) 은 이전과 동일하지만 루프의 첫번째 실행이 끝날 때까지 평가되지 않습니다.
+
+이 게임에서는 이전 예제의 `while` 루프보다 `repeat-while` 루프가 더 적합합니다.
+
+위의 `repeat-while` 루프에서 `square += board[square]` 는 루프의 조건이 `square` 가 항상 보드 위에 있는 것을 확인 한 직후에 실행 됩니다.
+
+이 동작은 앞서 설명한 `while` 루프 버전의 예제에서 처럼 배열의 범위를 체크할 필요가 없습니다.
+
+<br>
+
+## 조건 구문 (Conditional Statements)
 
 
 
