--- a/Swift Documentation/2.Language Guide/5.Control Flow.md
+++ b/Swift Documentation/2.Language Guide/5.Control Flow.md
@@ -373,6 +373,23 @@ print("Game over!")
 
 ## 조건 구문 (Conditional Statements)
 
+특정 조건에 따라 다양한 코드 조각을 실행하는 것이 유용한 경우가 많습니다.
+
+에러가 발생할 때 추가적인 코드 조각을 실행하거나 값이 너무 크거나 작을 때 메세지를 출력할 수 있습니다.
+
+이러한 동작을 위해서 코드의 일부를 조건부로 만들어야 합니다.
+
+#
+
+Swift 는 코드에 조건 분기를 추가하는 2가지 방법, `if` 구문과 `switch` 구문을 제공합니다.
+
+일반적으로 `if` 구문은 가능한 결과가 적은 간단한 조건에 적합합니다.
+
+`switch` 구문은 가능한 결과가 여러개이며 더 복잡한 조건에 적합하고 실행해야 할 적절한 코드 분기를 선택해야 하는 패턴 매칭 상황에 유용합니다.
+
+<br>
+
+### If
 
 
 
