--- a/Swift Documentation/2.Language Guide/5.Control Flow.md
+++ b/Swift Documentation/2.Language Guide/5.Control Flow.md
@@ -391,15 +391,118 @@ Swift 는 코드에 조건 분기를 추가하는 2가지 방법, `if` 구문과
 
 ### If
 
+가장 간단한 형태의 `if` 구문은 단일 `if` 조건을 갖습니다.
+
+해당 조건이 `true` 일 경우에만 명령문을 실행합니다.
+
+~~~ swift
+var temperatureInFahrenheit = 30
+if temperatureInFahrenheit <= 32 {
+    print("It's very cold. Consider wearing a scarf.")
+}
+// Prints "It's very cold. Consider wearing a scarf."
+~~~
+
+위의 예제에서는 온도가 화씨 32도 보다 작거나 같은지 확인합니다.
+
+만약 화씨 32도 보다 작거나 같다면 메시지가 출력됩니다.
+
+그렇지 않다면 메시지가 출력되지 않으며 코드는 `if` 구문의 닫는 중괄호 이후에 코드 실행이 계속됩니다.
+
+#
+
+`if` 구문은 `if` 조건이 `false` 일 때 대체 구문을 제공할 수 있습니다.
+
+이 구문은 `else` 키워드로 표시됩니다.
+
+~~~ swift
+temperatureInFahrenheit = 40
+if temperatureInFahrenheit <= 32 {
+    print("It's very cold. Consider wearing a scarf.")
+} else {
+    print("It's not that cold. Wear a T-shirt.")
+}
+// Prints "It's not that cold. Wear a T-shirt."
+~~~
+
+이 두 분기 중 하나는 항상 실행됩니다.
+
+온도가 증가하여 화씨 40도를 가지므로 더이상 스카프를 착용할 만큼 춥지 않아 `else` 구문이 실행됩니다.
+
+#
+
+추가 절을 고려하기 위해 여러 `if` 구문을 연결할 수 있습니다.
+
+~~~ swift
+temperatureInFahrenheit = 90
+if temperatureInFahrenheit <= 32 {
+    print("It's very cold. Consider wearing a scarf.")
+} else if temperatureInFahrenheit >= 86 {
+    print("It's really warm. Don't forget to wear sunscreen.")
+} else {
+    print("It's not that cold. Wear a T-shirt.")
+}
+// Prints "It's really warm. Don't forget to wear sunscreen."
+~~~
+
+여기 `if` 구문은 특히 따뜻한 온도에 대응하기 위해 추가 되었습니다.
+
+마지막 `else` 절은 남아있고 온도가 너무 따뜻하거나 너무 춥지 않은 경우에 응답을 출력합니다.
+
+그러나 마지막 `else` 절은 선택 사항이며 해당 조건이 완벽하게 필요가 없으면 제외할 수 있습니다.
+
+~~~ swift
+temperatureInFahrenheit = 72
+if temperatureInFahrenheit <= 32 {
+    print("It's very cold. Consider wearing a scarf.")
+} else if temperatureInFahrenheit >= 86 {
+    print("It's really warm. Don't forget to wear sunscreen.")
+}
+~~~
+
+온도가 너무 춥지도 따뜻하지도 않아 `if` 또는 `else if` 조건에 포함되지 않으므로 아무런 메시지가 출력되지 않습니다.
+
+#
+
+Swift 는 값을 설정할 때 사용할 수 있는 `if` 의 짧은 구문을 제공합니다.
+
+예를 들어 아래의 코드를 고려해 보세요.
+
+~~~ swift
+let temperatureInCelsius = 25
+let weatherAdvice: String
 
 
+if temperatureInCelsius <= 0 {
+    weatherAdvice = "It's very cold. Consider wearing a scarf."
+} else if temperatureInCelsius >= 30 {
+    weatherAdvice = "It's really warm. Don't forget to wear sunscreen."
+} else {
+    weatherAdvice = "It's not that cold. Wear a T-shirt."
+}
 
 
+print(weatherAdvice)
+// Prints "It's not that cold. Wear a T-shirt."
+~~~
+
+여기에서 각 분기는 `if` 구문 이후에 출력되는 `weatherAdvice` 상수에 값을 설정합니다.
+
+`if` 표현식을 대체 구문을 사용하면 더 간결하게 코드를 작성할 수 있습니다.
+
+~~~ swift
+let weatherAdvice = if temperatureInCelsius <= 0 {
+    "It's very cold. Consider wearing a scarf."
+} else if temperatureInCelsius >= 30 {
+    "It's really warm. Don't forget to wear sunscreen."
+} else {
+    "It's not that cold. Wear a T-shirt."
+}
 
 
-
-
-
+print(weatherAdvice)
+// Prints "It's not that cold. Wear a T-shirt."
+~~~
 
 
 
