--- a/Swift Documentation/2.Language Guide/5.Control Flow.md
+++ b/Swift Documentation/2.Language Guide/5.Control Flow.md
@@ -504,9 +504,79 @@ print(weatherAdvice)
 // Prints "It's not that cold. Wear a T-shirt."
 ~~~
 
+해당 `if` 표현식에서 각 분기에는 단일 값이 포함됩니다.
 
+분기의 조건이 `true` 인 경우 값은 `weatherAdvice` 에 할당되고 `if` 표현식 전체에 대한 값으로 사용됩니다.
 
+모든 `if` 분기는 `else if` 분기 또는 `else` 분기가 있으므로 분기 중 하나에 항상 일치하고 어떤 조건이 `true` 인지에 관계없이 `if` 표현식이 항상 값을 생성하도록 보장합니다.
 
+#
+
+할당 구문은 `if` 표현식 바깥에서 시작하므로 각 구문안에 `weatherAdvice =` 를 반복할 필요가 없습니다.
+
+대신 `if` 표현식의 각 분기는 `weatherAdvice` 의 값을 세가지 중 하나로 생성하고 할당합니다.
+
+#
+
+`if` 표현식의 모든 분기에는 동일한 타입의 값이 포함되어야 합니다.
+
+Swift 는 각 분기의 타입을 개별적으로 확인하기 때문에 하나 이상의 타입과 함께 사용할 수 있는 `nil` 과 같은 값은 Swift 가 `if` 표현식의 타입을 자동으로 결정하는 것을 방지합니다.
+
+대신 타입을 명시적으로 지정해야 합니다.
+
+예를 들면 다음과 같습니다.
+
+~~~ swift
+let freezeWarning: String? = if temperatureInCelsius <= 0 {
+    "It's below freezing. Watch for ice!"
+} else {
+    nil
+}
+~~~
+
+위의 코드에서 `if` 표현식의 한 분기에는 문자열 값이 있고 다른 분기에는 `nil` 값이 있습니다.
+
+`nil` 값은 모든 옵셔널 타입의 값으로 사용될 수 있으므로 [타입 명시 (Type Annotations)]() 에 설명된 대로 `freezeWarning` 은 옵셔널 문자열 이라고 명시적으로 작성되어야 합니다.
+
+#
+
+타입 정보를 제공하는 또 다른 방법은 `freezeWarning` 에 대한 타입을 명시적으로 제공하는 대신 `nil` 에 대한 타입을 명시적으로 제공하는 것입니다.
+
+~~~ swift
+let freezeWarning = if temperatureInCelsius <= 0 {
+    "It's below freezing. Watch for ice!"
+} else {
+    nil as String?
+}
+~~~
+
+#
+
+`if` 표현식은 에러를 전파하거나 반환하지 않는 `fatalError(_:file:line:)` 과 같은 함수를 호출하여 예상치 못한 실패에 응답할 수 있습니다.
+
+~~~ swift
+let weatherAdvice = if temperatureInCelsius > 100 {
+    throw TemperatureError.boiling
+} else {
+    "It's a reasonable temperature."
+}
+~~~
+
+이 예제에서 `if` 표현식은 예측 온도가 물의 끓는점인 100°C 보다 높은지 확인합니다.
+
+온도가 높으면 텍스트의 요약을 반환하는 대신 `.boiling` 에러를 발생시킵니다.
+
+`if` 표현식은 에러를 발생시킬 수 있지만 그 전에 `try` 를 작성하지 않습니다.
+
+에러 작업에 대한 자세한 내용은 [에러 처리 (Error Handling)]() 를 참조하세요.
+
+#
+
+위의 예제에서와 같이 할당 오른쪽에 `if` 표현식을 사용하는 것 외에도 함수나 클로저가 반환하는 값으로 표현식을 사용할 수도 있습니다.
+
+<br>
+
+### Switch
 
 
 
