--- a/Swift Documentation/2.Language Guide/5.Control Flow.md
+++ b/Swift Documentation/2.Language Guide/5.Control Flow.md
@@ -578,6 +578,36 @@ let weatherAdvice = if temperatureInCelsius > 100 {
 
 ### Switch
 
+`switch` 구문은 값을 고려하고 가능한 여러개의 일치 패턴과 비교합니다.
+
+그런 다음 첫번째로 일치하는 패턴을 기반으로 적절한 코드 블럭을 실행합니다.
+
+`switch` 구문은 여러 가능한 상태에 응답하기 위해 `if` 구문에 대한 대안을 제공합니다.
+
+#
+
+가장 간단한 형식으로 `switch` 구문은 동일한 타입의 하나 이상의 값과 비교합니다.
+
+~~~ swift
+switch <#some value to consider#> {
+case <#value 1#>:
+    <#respond to value 1#>
+case <#value 2#>,
+    <#value 3#>:
+    <#respond to value 2 or 3#>
+default:
+    <#otherwise, do something else#>
+}
+~~~
+
+모든 `switch` 구문은 여러개의 가능한 케이스로 구성되며 각 케이스는 `case` 키워드로 시작됩니다.
+
+특정 값을 비교하는 것 외에도 Swift는 각 케이스에 대해 더 복잡한 일치 패턴을 지정하는 여러가지 방법을 제공합니다.
+
+이러한 옵션은 이 챕터 뒤에서 설명됩니다.
+
+#
+
 
 
 
