--- a/Swift Documentation/2.Language Guide/5.Control Flow.md
+++ b/Swift Documentation/2.Language Guide/5.Control Flow.md
@@ -608,8 +608,64 @@ default:
 
 #
 
+`if` 구문의 본문과 마찬가지로 각 `case` 는 코드 실행 부분이 분리되어 있습니다.
+
+`switch` 구문은 어떤 분기를 선택해야 하는지 결정합니다.
+
+이 절차를 값의 스위칭 (switching) 이라 알려져 있습니다.
+
+#
+
+모든 `switch` 구문은 철저해야 합니다.
+
+즉, 고려중인 타입의 가능한 모든 값은 `switch` 케이스 중 하나와 일치해야 합니다.
+
+가능한 모든 값에 대한 케이스를 제공하는 것이 적절하지 않은 경우 명시적으로 해결되지 않은 모든 값을 포함하도록 기본 케이스를 정의할 수 있습니다.
+
+기본 케이스는 `default` 키워드로 나타내고 항상 마지막에 위치합니다.
+
+#
+
+이 예제는 `switch` 구문을 사용하여 `someCharacter` 의 단일 소문자를 고려합니다.
+
+~~~ swift
+let someCharacter: Character = "z"
+switch someCharacter {
+case "a":
+    print("The first letter of the Latin alphabet")
+case "z":
+    print("The last letter of the Latin alphabet")
+default:
+    print("Some other character")
+}
+// Prints "The last letter of the Latin alphabet"
+~~~
+
+`switch` 구문의 첫번째 케이스는 영어 알파벳의 첫번째 문자인 `a` 와 일치하고 두번째 케이스는 마지막 문자인 `z` 와 일치합니다.
+
+`switch` 는 모든 알파벳 문자 뿐만 아니라 가능한 모든 문자에 대한 케이스를 가지고 있어야 하므로 이 `switch` 구문은 `a` 와 `z` 를 제외한 다른 모든 문자는 `default` 케이스를 사용합니다.
+
+이렇게 함으로써 `switch` 구문은 완벽하다는 것을 보장합니다.
+
+#
+
+`if` 구문과 마찬가지로 `switch` 구문도 아래와 같은 표현식 형태를 가지고 있습니다.
+
+~~~ swift
+let anotherCharacter: Character = "a"
+let message = switch anotherCharacter {
+case "a":
+    "The first letter of the Latin alphabet"
+case "z":
+    "The last letter of the Latin alphabet"
+default:
+    "Some other character"
+}
 
 
+print(message)
+// Prints "The first letter of the Latin alphabet"
+~~~
 
 
 
