--- a/Swift Documentation/2.Language Guide/5.Control Flow.md
+++ b/Swift Documentation/2.Language Guide/5.Control Flow.md
@@ -667,6 +667,26 @@ print(message)
 // Prints "The first letter of the Latin alphabet"
 ~~~
 
+이 예제에서 `switch` 표현식의 각 케이스는 `anotherCharacter` 와 동일한 케이스일 때 사용될 `message` 에 대한 값을 포함합니다.
+
+`switch` 는 항상 철저하기 때문에 값은 항상 할당됩니다.
+
+#
+
+`if` 표현식과 마찬가지로 주어진 케이스에 대해 값을 제공하는 대신에 에러를 발생시키거나 절대 반환하지 않는 `fatalError(_:file:line:)` 함수를 호출할 수 있습니다.
+
+위의 예제에서와 같이 할당의 오른쪽에 `switch` 표현식을 사용할 수 있으며 함수 또는 클로저가 반환하는 값으로 사용할 수 있습니다.
+
+<br>
+
+### 암시적 Fallthrough 없음 (No Implicit Fallthrough)
+
+
+
+
+
+
+
 
 
 
