--- a/Swift Documentation/2.Language Guide/5.Control Flow.md
+++ b/Swift Documentation/2.Language Guide/5.Control Flow.md
@@ -681,6 +681,76 @@ print(message)
 
 ### 암시적 Fallthrough 없음 (No Implicit Fallthrough)
 
+C 와 Objective-C 의 `switch` 구문과 다르게 Swift 의 `switch` 구문은 기본적으로 각 케이스의 맨 아래로 떨어지지 않고 다음 케이스로 넘어갑니다.
+
+대신 처음 일치하는 `switch` 케이스가 완료되자마자 명시적으로 `break` 구문 요청 없이 전체 `switch` 구문이 실행을 완료합니다.
+
+이렇게 하면 C 의 `switch` 구문보다 더 안전하고 사용하기 쉽게 만들고 실수로 두개 이상 `switch` 케이스를 실행하는 것을 방지할 수 있습니다.
+
+> Note    
+> Swift 에서 `break` 는 필수는 아니지만 특정 케이스를 무시하거나 일치하는 케이스의 실행이 완료되기 전에 빠져나와야 할 경우 `break` 구문을 사용할 수 있습니다.
+> 자세한 내용은 [Switch 구문에서 Break (Break in a Switch Statement)]() 를 참조하세요.
+
+#
+
+각 케이스의 본문은 반드시 하나의 실행 가능한 구문이 포함되어야 합니다.
+
+아래의 코드는 첫번째 케이스가 비어 있으므로 유효하지 않습니다.
+
+~~~ swift
+let anotherCharacter: Character = "a"
+switch anotherCharacter {
+case "a": // Invalid, the case has an empty body
+case "A":
+    print("The letter A")
+default:
+    print("Not the letter A")
+}
+// This will report a compile-time error.
+~~~
+
+C 의 `switch` 구문과 다르게 이 `switch` 구문은 `"a"` 와 `"A"` 모두 일치하지 않습니다.
+
+`case "a":` 에 실행 가능한 구문이 없기 때문에 컴파일 타임에 오류가 발생합니다.
+
+이 접근 방식은 한 케이스에서 다른 케이스로의 우발적인 실행을 방지하고 의도가 더 명확하고 안전한 코드를 만듭니다.
+
+#
+
+`"a"` 와 `"A"` 모두 일치하는 단일 케이스의 `switch` 를 만들려면 두 값을 쉽표로 구분하여 하나의 복합 케이스로 구성합니다.
+
+~~~ swift
+let anotherCharacter: Character = "a"
+switch anotherCharacter {
+case "a", "A":
+    print("The letter A")
+default:
+    print("Not the letter A")
+}
+// Prints "The letter A"
+~~~
+
+가독성을 위해 복합 케이스를 여러줄로 작성할 수도 있습니다.
+
+복합 케이스에 대한 자세한 내용은 [복합 케이스 (Compound Cases)]() 를 참조하세요.
+
+> Note    
+> 특정 `switch` 케이스가 끝날 때 명시적으로 다음 케이스로 떨어뜨리려면 [Fallthrough]() 에서 설명한대로 `fallthrough` 키워드를 사용합니다.
+
+<br>
+
+### 간격 매칭 (Interval Matching)
+
+
+
+
+
+
+
+
+
+
+
 
 
 
