--- a/Swift Documentation/2.Language Guide/5.Control Flow.md
+++ b/Swift Documentation/2.Language Guide/5.Control Flow.md
@@ -741,10 +741,70 @@ default:
 
 ### 간격 매칭 (Interval Matching)
 
+`switch` 케이스의 값이 범위에 포함되었는지 확인할 수 있습니다.
 
+이 예제에서는 숫자 범위를 사용하여 모든 크기의 숫자에 대한 자연어 갯수를 제공합니다.
 
+~~~ swift
+let approximateCount = 62
+let countedThings = "moons orbiting Saturn"
+let naturalCount: String
+switch approximateCount {
+case 0:
+    naturalCount = "no"
+case 1..<5:
+    naturalCount = "a few"
+case 5..<12:
+    naturalCount = "several"
+case 12..<100:
+    naturalCount = "dozens of"
+case 100..<1000:
+    naturalCount = "hundreds of"
+default:
+    naturalCount = "many"
+}
+print("There are \(naturalCount) \(countedThings).")
+// Prints "There are dozens of moons orbiting Saturn."
+~~~
 
+위의 예제에서 `approximateCount` 는 `switch` 구문에서 평가됩니다.
 
+각 `case` 는 해당 값을 숫자 또는 범위와 비교합니다.
+
+`approximateCount` 의 값은 12와 100사이에 속하므로 `naturalCount` 는 `"dozens of"` 값이 할당되고 `switch` 구문을 빠져나옵니다.
+
+<br>
+
+### 튜플 (Tuples)
+
+튜플을 사용하여 동일한 `switch` 구문에서 여러 값을 사용할 수 있습니다.
+
+튜플의 각 요소는 다른 값 또는 값의 범위를 판단할 수 있습니다.
+
+또는 가능한 어떠한 값도 일치하도록 와일드카드 패턴 (wildcard pattern) 으로 알려진 언더바 문자 (`_`) 를 사용할 수 있습니다.
+
+#
+
+아래 예제는 타입 `(Int, Int)` 의 간단한 튜플로 표현된 (x, y) 포인트를 가지며 그래프에서 이를 분류합니다.
+
+~~~ swift
+let somePoint = (1, 1)
+switch somePoint {
+case (0, 0):
+    print("\(somePoint) is at the origin")
+case (_, 0):
+    print("\(somePoint) is on the x-axis")
+case (0, _):
+    print("\(somePoint) is on the y-axis")
+case (-2...2, -2...2):
+    print("\(somePoint) is inside the box")
+default:
+    print("\(somePoint) is outside of the box")
+}
+// Prints "(1, 1) is inside the box"
+~~~
+
+<img width="600" src="https://github.com/Developer-Nova/Swift-Documentation/assets/123448121/7d8551d2-d3be-4b82-a792-f03d3dd5a6c9">
 
 
 
