--- a/Swift Documentation/2.Language Guide/5.Control Flow.md
+++ b/Swift Documentation/2.Language Guide/5.Control Flow.md
@@ -806,6 +806,21 @@ default:
 
 <img width="600" src="https://github.com/Developer-Nova/Swift-Documentation/assets/123448121/7d8551d2-d3be-4b82-a792-f03d3dd5a6c9">
 
+`switch` 구문은 점이 원점 (0, 0) 인지, 빨간색 x축 위에 있는지, 초록색 y축 위에 있는지, 원점이 중심인 파란색 4 x 4 박스 내부에 있는지 외부에 있는지 판단합니다.
+
+#
+
+C 와 다르게 Swift 는 여러 `switch` 케이스가 동일한 값을 고려할 수 있습니다.
+
+실제로 점 (0, 0) 은 이 예제의 4개의 케이스 모두와 일치합니다.
+
+그러나 여러개가 일치할 수 있더라도 항상 첫번째로 일치하는 케이스가 사용됩니다.
+
+점 (0, 0) 은 첫번째 `case (0, 0)` 와 먼저 일치하므로 일치하는 다른 모든 케이스는 무시됩니다.
+
+<br>
+
+### 값 바인딩 (Value Bindings)
 
 
 
