--- a/Swift Documentation/2.Language Guide/5.Control Flow.md
+++ b/Swift Documentation/2.Language Guide/5.Control Flow.md
@@ -873,6 +873,61 @@ case let (x, y):
 
 ### Where
 
+`switch` 케이스는 `where` 절을 사용하여 추가 조건을 확인할 수 있습니다.
+
+아래 예제는 그래프의 (x, y) 점을 분류합니다.
+
+~~~ swift
+let yetAnotherPoint = (1, -1)
+switch yetAnotherPoint {
+case let (x, y) where x == y:
+    print("(\(x), \(y)) is on the line x == y")
+case let (x, y) where x == -y:
+    print("(\(x), \(y)) is on the line x == -y")
+case let (x, y):
+    print("(\(x), \(y)) is just some arbitrary point")
+}
+// Prints "(1, -1) is on the line x == -y"
+~~~
+
+<img width="600" src="https://github.com/Developer-Nova/Swift-Documentation/assets/123448121/5a99bfeb-76aa-4c9c-8d15-4d499a93537a">
+
+해당 `switch` 구문은 점이 녹색 대각선 (`x == y`) 위에 있는지, 보라색 대각선 (`x == -y`) 위에 있는지, 아니면 그 외에 위치하는지 판단합니다.
+
+#
+
+3개의 `switch` 케이스는 임시적으로 상수 `x` 와 `y` 를 선언하며, 이는 `yetAnotherPoint` 에서 2개의 튜플 값을 일시적으로 가져옵니다.
+
+이러한 상수는 다이나믹 필터를 생성하기 위해 `where` 절의 일부로 사용됩니다.
+
+`switch` 케이스는 `where` 절의 조건이 `true` 일 때만 `point` 의 현재 값과 일치합니다.
+
+#
+
+이전 예제와 마찬가지로 마지막 케이스는 가능한 모든 나머지 값과 일치하므로 `switch` 구문을 철저하게 하기 위해 `default` 케이스가 필요하지 않습니다.
+
+<br>
+
+### 복합 케이스 (Compound Cases)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
