--- a/Swift Documentation/2.Language Guide/5.Control Flow.md
+++ b/Swift Documentation/2.Language Guide/5.Control Flow.md
@@ -910,7 +910,35 @@ case let (x, y):
 
 ### 복합 케이스 (Compound Cases)
 
+동일한 본문을 공유하는 여러개의 스위치 케이스는 `case` 다음에 각 패턴 사아에 콤마로 구분하여 여러개의 패턴으로 결합할 수 있습니다.
 
+여러 패턴 중 하나라도 일치하면 해당 케이스가 일하는 것으로 간주됩니다.
+
+패턴이 길면 여러줄로 작성할 수도 있습니다.
+
+~~~ swift
+let someCharacter: Character = "e"
+switch someCharacter {
+case "a", "e", "i", "o", "u":
+    print("\(someCharacter) is a vowel")
+case "b", "c", "d", "f", "g", "h", "j", "k", "l", "m",
+    "n", "p", "q", "r", "s", "t", "v", "w", "x", "y", "z":
+    print("\(someCharacter) is a consonant")
+default:
+    print("\(someCharacter) isn't a vowel or a consonant")
+}
+// Prints "e is a vowel"
+~~~
+
+`switch` 구문의 첫번째 케이스는 영어의 5개 소문자 모음이 일치합니다.
+
+마찬가지로 두번째 케이스는 모든 영어 소문자 자음이 일치합니다.
+
+마지막으로 `default` 케이스는 다른 어떠한 문자와 일치합니다.
+
+#
+
+복합 케이스 (Compound cases) 는 값 바인딩도 포함할 수 있습니다.
 
 
 
