--- a/Swift Documentation/2.Language Guide/5.Control Flow.md
+++ b/Swift Documentation/2.Language Guide/5.Control Flow.md
@@ -940,7 +940,30 @@ default:
 
 복합 케이스 (Compound cases) 는 값 바인딩도 포함할 수 있습니다.
 
+복합 케이스의 모든 패턴은 동일한 값 바인딩 세트를 포함해야 하고 각 바인딩은 복합 케이스의 모든 패턴에서 동일한 타입의 값을 가져와야 합니다.
 
+이는 복합 케이스의 어느 부분이 일치하는것과 상관없이 케이스 본문의 코드가 항상 바인딩 값에 접근할 수 있고 값이 항상 동일한 타입을 갖도록 보장합니다.
+
+~~~ swift
+let stillAnotherPoint = (9, 0)
+switch stillAnotherPoint {
+case (let distance, 0), (0, let distance):
+    print("On an axis, \(distance) from the origin")
+default:
+    print("Not on an axis")
+}
+// Prints "On an axis, 9 from the origin"
+~~~
+
+위 `case` 의 패턴에는 `x` 축의 점과 일치하는 `(let distance, 0)` 패턴과 `y` 축의 점과 일치하는 `(0, let distance)` 2개의 패턴을 가지고 있습니다.
+
+두 패턴 모두 `distance` 에 대한 바인딩을 포함하고 있으며 `distance` 는 두 패턴 모두에서 정수입니다.
+
+즉, `case` 본문의 코드는 항상 `distance` 의 값에 접근할 수 있습니다.
+
+<br>
+
+## 제어 변경 구문 (Control Transfer Statements)
 
 
 
