--- a/Swift Documentation/2.Language Guide/5.Control Flow.md
+++ b/Swift Documentation/2.Language Guide/5.Control Flow.md
@@ -963,8 +963,29 @@ default:
 
 <br>
 
-## 제어 변경 구문 (Control Transfer Statements)
+## 제어 전송 구문 (Control Transfer Statements)
 
+제어 전송 구문 (Control transfer statements) 은 한 코드에서 다른 코드로 제어를 전송하여 코드가 실행되는 순서를 변경합니다.
+
+Swift 에는 5개의 제어 전송 명령문이 있습니다.
+
+- Continue
+
+- break
+
+- fallthrough
+
+- return
+
+- throw
+
+`continue`, `break`, `fallthrough` 문은 아래 설명되어 있습니다.
+
+`return` 문은 [함수 (Functions)]() 에 설명되어 있고 `throw` 문은 [Throwing 함수를 이용한 에러 전파 (Propagating Errors Using Throwing Functions)]() 에 설명되어 있습니다.
+
+<br>
+
+### Continue
 
 
 
