--- a/Swift Documentation/2.Language Guide/5.Control Flow.md
+++ b/Swift Documentation/2.Language Guide/5.Control Flow.md
@@ -987,7 +987,35 @@ Swift 에는 5개의 제어 전송 명령문이 있습니다.
 
 ### Continue
 
+`continue` 구문은 루프에 수행중인 작업을 중지하고 루프의 다음 반복을 시작하기 위해 사용합니다.
 
+루프를 완전히 종료하지 않고도 "현재 루프 반복이 완료되었습니다." 라고 말합니다.
+
+#
+
+아래 예제는 비밀 퍼즐 구문을 생성하기 위해 소문자 문자열에서 모든 모음과 공백을 제거합니다.
+
+~~~ swift
+let puzzleInput = "great minds think alike"
+var puzzleOutput = ""
+let charactersToRemove: [Character] = ["a", "e", "i", "o", "u", " "]
+for character in puzzleInput {
+    if charactersToRemove.contains(character) {
+        continue
+    }
+    puzzleOutput.append(character)
+}
+print(puzzleOutput)
+// Prints "grtmndsthnklk"
+~~~
+
+위 코드는 모음 또는 공백이 일치할 때마다 `continue` 키워드를 호출하여 루프의 현재 반복이 즉시 종료되고 다음 반복의 시작으로 바로 이동 합니다.
+
+<br>
+
+### Break
+
+`break` 구문은 전체 제어 흐름 구문의 실행을 즉시 종료합니다.
 
 
 
