--- a/Swift Documentation/2.Language Guide/5.Control Flow.md
+++ b/Swift Documentation/2.Language Guide/5.Control Flow.md
@@ -1017,6 +1017,22 @@ print(puzzleOutput)
 
 `break` 구문은 전체 제어 흐름 구문의 실행을 즉시 종료합니다.
 
+`break` 구문은 `switch` 내부나 루프 구문에서 `switch` 또는 루프 구문을 다른 경우보다 일찍 종료시킬 때 사용할 수 있습니다.
+
+<br>
+
+#### 루프 구문에서 중단 (Break in a Loop Statement)
+
+루프 구문 내에서 사용하면 `break` 는 루프 실행을 즉시 종료하고 제어를 루프의 닫기 중괄호 (`}`) 뒤의 코드로 전달합니다.
+
+루프의 현재 반복에서 추가 코드가 실행되지 않으며 루프의 추가 반복이 시작되지 않습니다.
+
+<br>
+
+#### Switch 구문에서 Break (Break in a Switch Statement)
+
+`switch` 구문 내에서 사용될 경우 `break` 는 `switch` 구문을 즉시 종료하고 제어를 `switch` 구문의 닫힌 중괄호 (`}`) 뒤의 코드로 전달합니다.
+
 
 
 
