--- a/Swift Documentation/2.Language Guide/5.Control Flow.md
+++ b/Swift Documentation/2.Language Guide/5.Control Flow.md
@@ -1033,6 +1033,69 @@ print(puzzleOutput)
 
 `switch` 구문 내에서 사용될 경우 `break` 는 `switch` 구문을 즉시 종료하고 제어를 `switch` 구문의 닫힌 중괄호 (`}`) 뒤의 코드로 전달합니다.
 
+이러한 동작은 `switch` 구문에서 하나 이상의 케이스를 일치시키고 무시하는데 사용할 수 있습니다.
+
+Swift 의 `switch` 구문은 철저하고 빈 케이스를 허용하지 않기 때문에 의도를 명시적으로 나타내기 위해 의도적으로 케이스를 일치시키고 무시해야 하는 경우가 있습니다.
+
+무시하려는 케이스의 전체 본문으로 `break` 구문을 작성하여 이를 수행합니다.
+
+해당 케이스가 `switch` 구문과 일치하면 케이스 내부의 `break` 구문은 `switch` 구문의 실행을 즉시 종료합니다.
+
+> Note    
+> `switch` 케이스에 주석만 포함되어 있으면 컴파일 시 에러가 발생합니다.
+> 주석은 구문이 아니며 `switch` 케이스가 무시되지 않습니다.
+> 항상 `switch` 케이스를 무시하려면 `break` 구문을 사용하십시오.
+
+#
+
+아래 예제는 `Character` 값을 바꾸고 4개의 언어중 하나의 언어로 숫자 기호를 나타내는지 여부를 확인합니다.
+
+간결성을 위해 단일 케이스에 여러 값이 포함됩니다.
+
+~~~ swift
+let numberSymbol: Character = "三"  // Chinese symbol for the number 3
+var possibleIntegerValue: Int?
+switch numberSymbol {
+case "1", "١", "一", "๑":
+    possibleIntegerValue = 1
+case "2", "٢", "二", "๒":
+    possibleIntegerValue = 2
+case "3", "٣", "三", "๓":
+    possibleIntegerValue = 3
+case "4", "٤", "四", "๔":
+    possibleIntegerValue = 4
+default:
+    break
+}
+if let integerValue = possibleIntegerValue {
+    print("The integer value of \(numberSymbol) is \(integerValue).")
+} else {
+    print("An integer value couldn't be found for \(numberSymbol).")
+}
+// Prints "The integer value of 三 is 3."
+~~~
+
+이 예제는 `numberSymbol` 이 `1` 부터 `4` 의 숫자가 라틴어, 아랍어, 중국어, 태국어 기호인지 확인 합니다.
+
+일치하는 항목을 찾으면 `switch` 구문의 케이스 중에 하나는 적절한 정수 값을 `possibleIntegerValue` 라 불리는 옵셔널 `Int?` 변수에 할당합니다.
+
+#
+
+`switch` 구문의 실행이 완료된 후 이 예제에서는 옵셔널 바인딩을 사용하여 값이 존재하는지 여부를 확인합니다.
+
+`possibleIntegerValue` 변수는 옵셔널 타입이기 때문에 초기값은 `nil` 이므로 `possibleIntegerValue` 가 `switch` 구문의 케이스 중 하나와 일치하여 실제 값이 설정된다면 옵셔널 바인딩은 성공할 것입니다.
+
+#
+
+위 예제에서 가능한 모든 `Character` 값을 나열하는것은 실용적이지 않기 때문에 `default` 케이스로 일치되지 않는 모든 문자를 처리합니다.
+
+`default` 케이스는 어떠한 작업도 수행할 필요가 없으므로 단일 `break` 문을 본문으로 사용하여 작성되었습니다.
+
+`default` 케이스에 일치하는 즉시 `break` 구문은 `switch` 구문의 실행을 종료하고 이어서 `if let` 구문을 실행합니다.
+
+<br>
+
+### Fallthrough
 
 
 
