--- a/Swift Documentation/2.Language Guide/5.Control Flow.md
+++ b/Swift Documentation/2.Language Guide/5.Control Flow.md
@@ -1097,7 +1097,63 @@ if let integerValue = possibleIntegerValue {
 
 ### Fallthrough
 
+Swift 에서 `switch` 구문은 각 케이스의 맨 아래에서 다음 케이스로 넘어가지 않습니다.
 
+즉, 첫번째 케이스가 일치하는 즉시 전체 `switch` 구문의 실행이 완료됩니다.
+
+반대로 C 는 다음 케이스로 넘어가는 것을 방지하기 위해 모든 `switch` 케이스 마지막에 명시적으로 `break` 구문을 넣어야 합니다.
+
+기본적으로 다음 케이스로 넘어가지 않는다는 것은 Swift 의 `switch` 구문이 C 의 대응문 보다 훨씬 더 간결하고 예측 가능하다는 것을 의미하므로 실수로 여러 `switch` 케이스를 실행하는 것을 방지합니다.
+
+#
+
+C 처럼 다음 케이스로 넘어가는 동작이 필요한 경우 `fallthrough` 키워드를 사용하여 케이스 별로 동작을 선택할 수 있습니다.
+
+아래 예제에서는 `fallthrough` 를 사용하여 숫자의 설명을 만드는데 사용됩니다.
+
+~~~ swift
+let integerToDescribe = 5
+var description = "The number \(integerToDescribe) is"
+switch integerToDescribe {
+case 2, 3, 5, 7, 11, 13, 17, 19:
+    description += " a prime number, and also"
+    fallthrough
+default:
+    description += " an integer."
+}
+print(description)
+// Prints "The number 5 is a prime number, and also an integer."
+~~~
+
+이 예제에서는 `description` 이라는 새로운 `String` 변수를 선언하고 초기값을 할당합니다.
+
+그런 다음 함수는 `switch` 구문을 사용하여 `integerToDescribe` 의 값을 고려합니다.
+
+`integerToDescribe` 의 값이 목록의 소수 중 하나인 경우 소수라는 것을 나타내는 텍스트를 `description` 뒤에 추가합니다.
+
+그러면 `fallthrough` 키워드를 사용하여 `default` 케이스 또한 동작하게 됩니다.
+
+`default` 케이스는 추가 설명을 덧붙이고 `switch` 구문은 완료됩니다.
+
+#
+
+`integerToDescribe` 의 값이 목록에 없는 소수이면 첫번째 `switch` 케이스와 전혀 일치하지 않습니다.
+
+그 외 특별한 케이스가 없기 때문에 `integerToDescribe` 는 `default` 케이스와 일치합니다.
+
+#
+
+`switch` 구문의 실행이 완료된 후에 `print(_:separator:terminator:)` 함수를 사용하여 숫자의 설명이 출력됩니다.
+
+이 예제에서 숫자 `5` 는 소수로 올바르게 식별됩니다.
+
+> Note    
+> `fallthrough` 키워드는 `switch` 케이스 실행을 위한 케이스 조건을 확인하지 않습니다.
+> `fallthrough` 키워드는 간단하게 C 의 표준 `switch` 구문 동작처럼 다음 케이스 또는 `default` 케이스로 코드 실행을 직접적으로 이동시킵니다.
+
+<br>
+
+### 레이블이 있는 구문 (Labeled Statements)
 
 
 
