--- a/Swift Documentation/2.Language Guide/5.Control Flow.md
+++ b/Swift Documentation/2.Language Guide/5.Control Flow.md
@@ -1155,11 +1155,86 @@ print(description)
 
 ### 레이블이 있는 구문 (Labeled Statements)
 
+Swift 에서는 다른 루프와 조건문 안에 루프와 조건문을 중첩하여 복잡한 제어 흐름 구조를 만들 수 있습니다.
 
+그러나 루프와 조건문은 모두 `break` 구문을 사용하여 실행을 조기에 종료할 수 있습니다.
 
+따라서 `break` 구문으로 종료하려는 루프나 조건문을 명시적으로 지정하는 것이 유용한 경우가 있습니다.
 
+마찬가지로 여러개의 중첩 루프가 있는 경우 `continue` 구문이 영향을 미치는 루프를 명시적으로 지정하는 것이 유용할 수 있습니다.
 
+#
 
+이러한 목적을 달성하기 위해 루프 구문 또는 조건문에 구문 레이블 (statement label) 을 표시할 수 있습니다.
+
+조건문에서 `break` 구문과 함께 구문 레이블을 사용하여 레이블이 지정된 명령문의 실행을 종료할 수 있습니다.
+
+루프 구문에서 `break` 또는 `continue` 구문과 함께 구문 레이블을 사용하여 레이블이 지정된 명령문의 실행을 종료하거나 계속할 수 있습니다.
+
+#
+
+레이블이 있는 구문 (labeled statement) 은 구문의 소개 키워드와 같은 줄에 레이블을 배치하고 그 뒤에 콜론을 붙여 표시합니다.
+
+다음 예제는 `while` 루프에 대한 구문의 예입니다.
+
+모든 루프와 `switch` 구문에 대해 동일합니다.
+
+~~~ swift
+<#label name#>: while <#condition#> {
+   <#statements#>
+}
+~~~
+
+다음 예제는 이 챕터의 앞부분에서 봤던 Snakes and Ladders 게임의 바뀐 버전에 대해 레이블이 지정된 `while` 루프와 `break`, `continue` 구문을 사용합니다.
+
+이번에는 게임에 추가 규칙이 있습니다.
+
+- 이기려면 정사각형 25에 정확히 위치해야 합니다.
+
+주사위를 굴려 정사각형 25를 넘어간다면 정확히 정사각형 25에 위치할 때까지 주사위를 굴려야 합니다.
+
+게임판은 기존과 동일합니다.
+
+<img width="600" src="https://github.com/Developer-Nova/Swift-Documentation/assets/123448121/222b443e-ea0b-4646-960b-edd81db418a2">
+
+`finalSquare`, `board`, `square`, `diceRoll` 은 이전과 동일한 방식으로 초기화됩니다.
+
+~~~ swift
+let finalSquare = 25
+var board = [Int](repeating: 0, count: finalSquare + 1)
+board[03] = +08; board[06] = +11; board[09] = +09; board[10] = +02
+board[14] = -10; board[19] = -11; board[22] = -02; board[24] = -08
+var square = 0
+var diceRoll = 0
+~~~
+
+#
+
+이 버전의 게임에서 `while` 루프와 `switch` 구문을 사용하여 게임의 논리를 구현합니다.
+
+`while` 루프는 Snakes and Ladders 게임의 기본 게임 루프임을 나타내기 위해 `gameLoop` 라는 구문 레이블을 가지고 있습니다.
+
+`while` 루프의 조건은 정확히 정사각형 25에 착지를 위한 조건을 반영한 `while square != finalSquare` 입니다.
+
+~~~ swift
+gameLoop: while square != finalSquare {
+    diceRoll += 1
+    if diceRoll == 7 { diceRoll = 1 }
+    switch square + diceRoll {
+    case finalSquare:
+        // diceRoll will move us to the final square, so the game is over
+        break gameLoop
+    case let newSquare where newSquare > finalSquare:
+        // diceRoll will move us beyond the final square, so roll again
+        continue gameLoop
+    default:
+        // this is a valid move, so find out its effect
+        square += diceRoll
+        square += board[square]
+    }
+}
+print("Game over!")
+~~~
 
 
 
