--- a/Swift Documentation/2.Language Guide/5.Control Flow.md
+++ b/Swift Documentation/2.Language Guide/5.Control Flow.md
@@ -1236,6 +1236,34 @@ gameLoop: while square != finalSquare {
 print("Game over!")
 ~~~
 
+주사위는 각 루프가 시작될 때 굴립니다.
+
+루프는 플레이어를 즉시 이동하지 않고 `switch` 구문을 사용하여 이동의 결과를 고려하고 이동이 가능한지 여부를 결정합니다.
+
+- 주사위 굴림이 플레이어를 마지막 정사각형으로 이동시킨다면 게임은 종료됩니다. `break gameLoop` 구문은 `while` 루프의 바깥으로 제어권을 넘겨 게임을 종료합니다.
+
+- 주사위 굴림이 플레이어를 마지막 정사각형을 넘어 이동시킨다면 해당 이동은 유효하지 않으며 플레이어는 다시 주사위를 굴려야 합니다. `continue gameLoop` 구문은 현재 `while` 루프 반복을 종료하고 루프의 다음 반복을 시작합니다.
+
+- 다른 모든 경우에는 주사위 굴림이 유효합니다. 플레이어는 `diceRoll` 만큼 이동하고 게임 로직은 뱀과 사다리가 있는지 확인합니다. 그런 다음 루프는 종료되고 제어는 다음 턴이 필요한지 여부를 결정하는 `while` 문의 조건으로 되돌아 갑니다.
+
+> Note    
+> 위의 `break` 구문을 `gameLoop` 레이블없이 사용하면 `while` 구문이 아닌 `switch` 구문을 벗어나게 됩니다.
+> `gameLoop` 레이블을 사용하면 어떤 제어문을 종료해야 하는지 명확해집니다.
+>
+> 루프의 다음 반복으로 이동하기 위해 `continue gameLoop` 를 호출할 때 `gameLoop` 레이블을 반드시 사용할 필요는 없습니다.
+> 게임에는 루프가 하나만 있으므로 `continue` 구문이 어떤 루프에 영향을 미칠지에 대한 모호성은 없습니다.
+> 그러나 `continue` 구문과 함께 `gameLoop` 레이블을 사용해도 아무런 문제가 없습니다.
+> 이렇게 하면 `break` 구문과 함께 레이블을 사용하는 것이 일관되고 게임의 로직을 더 명확하게 읽고 이해하는데 도움이 됩니다.
+
+<br>
+
+## 조기 종료 (Early Exit)
+
+
+
+
+
+
 
 
 
