--- a/Swift Documentation/2.Language Guide/5.Control Flow.md
+++ b/Swift Documentation/2.Language Guide/5.Control Flow.md
@@ -1259,7 +1259,63 @@ print("Game over!")
 
 ## 조기 종료 (Early Exit)
 
+`if` 구문과 같이 `guard` 구문은 표현식의 부울 값에 따라 명령문을 실행합니다.
 
+`guard` 구문 뒤의 코드가 실행되려면 반드시 조건이 참이어야 함을 요구하기 위해 `guard` 구문을 사용합니다.
+
+`if` 구문과 달리 `guard` 구문은 항상 `else` 절을 가지고 있습니다.
+
+조건이 참이 아닐 경우 `else` 절 안의 코드가 실행됩니다.
+
+~~~ swift
+func greet(person: [String: String]) {
+    guard let name = person["name"] else {
+        return
+    }
+
+
+    print("Hello \(name)!")
+
+
+    guard let location = person["location"] else {
+        print("I hope the weather is nice near you.")
+        return
+    }
+
+
+    print("I hope the weather is nice in \(location).")
+}
+
+
+greet(person: ["name": "John"])
+// Prints "Hello John!"
+// Prints "I hope the weather is nice near you."
+greet(person: ["name": "Jane", "location": "Cupertino"])
+// Prints "Hello Jane!"
+// Prints "I hope the weather is nice in Cupertino."
+~~~
+
+`guard` 구문의 조건이 충족되면 `guard` 구문의 닫는 중괄호 이후에 코드 실행이 계속됩니다.
+
+조건의 일부로 옵셔널 바인딩을 사용하여 값이 할당된 모든 변수 또는 상수는 `guard` 구문이 존재하는 나머지 코드 블럭에서 사용할 수 있습니다.
+
+#
+
+해당 조건이 충족되지 않으면 `else` 절 내부의 코드가 실행됩니다.
+
+해당 분기는 반드시 `guard` 구문이 존재하는 코드 블럭을 종료하기 위해 제어를 이동해야 합니다.
+
+`return`, `break`, `continue`, `throw` 와 같은 제어 전송문을 사용하여 이 작업을 수행하거나 `fatalError(_:file:line:)` 와 같이 반환되지 않는 함수나 메서드를 호출할 수 있습니다.
+
+#
+
+필요조건을 위한 `guard` 구문 사용은 같은걸 확인하는 `if` 구문에 비해 코드의 가독성이 향상됩니다.
+
+이를 통해 일반적으로 실행되는 코드를 `else` 블럭으로 래핑하지 않고 작성할 수 있으며 요구에 충족하지 않는 부분을 요구사항 근처에서 처리할 수 있도록 해줍니다.
+
+<br>
+
+## 지연된 작업 (Deferred Actions)
 
 
 
