--- a/Swift Documentation/2.Language Guide/5.Control Flow.md
+++ b/Swift Documentation/2.Language Guide/5.Control Flow.md
@@ -1317,30 +1317,171 @@ greet(person: ["name": "Jane", "location": "Cupertino"])
 
 ## 지연된 작업 (Deferred Actions)
 
+코드의 일부가 실행되는지 여부나 실행 횟수를 제어할 수 있는 `if` 와 `while` 과 같은 제어 흐름 구조와 다르게 `defer` 는 코드 조각이 실행되는 시기를 제어합니다.
+
+프로그램이 현재 범위의 끝에 도달하면 나중에 실행될 코드를 작성하기 위해 `defer` 블럭을 사용합니다.
+
+~~~ swift
+var score = 1
+if score < 10 {
+    defer {
+        print(score)
+    }
+    score += 5
+}
+// Prints "6"
+~~~
+
+위의 예제에서 `defer` 블럭 내부의 코드는 `if` 구문의 본문을 종료하기 전에 실행됩니다.
+
+먼저 `score` 를 5 증가시키는 `if` 구문의 코드가 실행됩니다.
+
+그런다음 `if` 구문의 범위를 종료하기 전에 지연된 코드가 실행됩니다.
+
+#
+
+프로그램이 해당 범위를 어떻게 종료하는지에 관계없이 `defer` 내부의 코드는 항상 실행됩니다.
+
+여기에는 함수의 조기 종료, `for` 루프의 중단 또는 에러를 던지는 코드가 포함됩니다.
+
+`defer` 동작은 수동으로 메모리 할당과 해제, 하위 수준 파일 열기 및 닫기, 데이터베이스에서 트랜젝션 시작과 종료와 같은 한 쌍의 작업이 발생하도록 보장해야 하는 작업에 유용합니다.
+
+예를 들어 다음의 코드는 점수에 100을 더하고 빼서 점수에 임시 보너스를 제공합니다.
+
+~~~ swift
+var score = 3
+if score < 100 {
+    score += 100
+    defer {
+        score -= 100
+    }
+    // Other code that uses the score with its bonus goes here.
+    print(score)
+}
+// Prints "103"
+~~~
+
+#
+
+동일한 범위에 두개 이상의 `defer` 블럭을 작성하는 경우 첫번째로 지정한 `defer` 블럭이 마지막으로 실행됩니다.
+
+~~~ swift
+if score < 10 {
+    defer {
+        print(score)
+    }
+    defer {
+        print("The score is:")
+    }
+    score += 5
+}
+// Prints "The score is:"
+// Prints "6"
+~~~
+
+예를 들어 런타임 에러나 충돌로 인해 프로그램 실행이 중단되면 지연된 코드가 실행되지 않습니다.
+
+그러나 지연된 코드는 에러가 발생한 후에 실행됩니다.
+
+에러 처리와 `defer` 를 함께 사용하는 방법에 대한 자세한 내용은 [정리 작업 지정 (Specifying Cleanup Actions)]() 을 참고하세요.
+
+<br>
+
+## 사용 가능한 API 확인 (Checking API Availability)
+
+Swift 에는 API 가용성 확인 (checking API availability) 기능이 내장되어 있어 특정 배포 대상에서 사용할 수 없는 API 를 실수로 사용하지 않도록 보장합니다.
+
+#
+
+컴파일러는 SDK 의 가용성 정보를 사용하여 코드에 사용된 모든 API 가 프로젝트에서 지정한 배포 대상에서 사용 가능한지 확인합니다.
+
+Swift 는 사용할 수 없는 API 를 사용하려고 하면 컴파일 타임에 에러를 발생시킵니다.
+
+#
+
+사용하려는 API 를 런타임에 사용할 수 있는지 여부에 따라 `if` 또는 `guard` 구문에서 가용성 조건 (availability condition) 을 사용하여 코드 블럭을 조건부로 실행합니다.
+
+컴파일러는 해당 코드 블럭의 API 를 사용할 수 있는지 확인할 때 가용성 조건의 정보를 사용합니다.
+
+~~~ swift
+if #available(iOS 10, macOS 10.12, *) {
+    // Use iOS 10 APIs on iOS, and use macOS 10.12 APIs on macOS
+} else {
+    // Fall back to earlier iOS and macOS APIs
+}
+~~~
+
+위의 가용성 조건은 iOS 에서 `if` 구문의 본문이 iOS 10 이상에서만 실행되도록 지정합니다.
+
+macOS 에서는 macOS 10.12 이상에서만 가능합니다.
+
+마지막 인수 `*` 는 필수이며 다른 플랫폼에서는 `if` 의 본문이 대상에서 지정한 최소 배포 대상에서 실행되도록 지정합니다.
+
+#
+
+일반적인 형태의 가용성 조건은 플랫폼 이름과 버전 목록을 사용합니다.
+
+`iOS`, `macOS`, `watchOS`, `tvOS` 와 같은 플랫폼 이름을 사용합니다.
+
+전체 목록은 [선언 속성 (Declaration Attributes)]() 을 참조하세요.
+
+iOS 8 또는 macOS 10.10 과 같은 주요 버전 번호를 지정하는 것 외에도 iOS 11.2.6 및 macOS 10.13.3 과 같은 부 버전 번호를 지정할 수 있습니다.
+
+~~~ swift
+if #available(<#platform name#> <#version#>, <#...#>, *) {
+    <#statements to execute if the APIs are available#>
+} else {
+    <#fallback statements to execute if the APIs are unavailable#>
+}
+~~~
+
+#
+
+`guard` 구문과 함께 가용성 조건을 사용하면 해당 코드 블럭의 나머지 코드에 사용되는 가용성 정보가 구체화 됩니다.
+
+~~~ swift
+@available(macOS 10.12, *)
+struct ColorPreference {
+    var bestColor = "blue"
+}
 
 
+func chooseBestColor() -> String {
+    guard #available(macOS 10.12, *) else {
+       return "gray"
+    }
+    let colors = ColorPreference()
+    return colors.bestColor
+}
+~~~
+
+위의 예제에서 `ColorPreference` 구조체는 macOS 10.12 이상을 요구합니다.
+
+`chooseBestColor()` 함수는 가용성 가드로 시작합니다.
+
+플랫폼 버전이 `ColorPreference` 를 사용하기에 너무 오래되어 사용할 수 없는 경우 항상 사용할 수 있는 동작으로 대체됩니다.
+
+`guard` 구문 뒤에는 macOS 10.12 이상이 필요한 API 를 사용할 수 있습니다.
+
+#
+
+`#available` 이외에도 Swift 는 비가용성 조건을 사용하여 반대 검사도 지원합니다.
+
+예를 들어 아래의 두가지 검사는 동일한 작업을 수행합니다.
+
+~~~ swift
+if #available(iOS 10, *) {
+} else {
+    // Fallback code
+}
 
 
+if #unavailable(iOS 10) {
+    // Fallback code
+}
+~~~
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+`#unavailable` 를 사용하는 형식은 대체 코드만을 포함할 때 더 읽기 쉬운 코드로 만들어 줍니다.
 
 ***
 
