--- a/Swift Documentation/2.Language Guide/6.Functions.md
+++ b/Swift Documentation/2.Language Guide/6.Functions.md
@@ -1,5 +1,51 @@
 # Functions (함수)
 
+함수를 정의 및 호출하고, 인수에 레이블을 지정하고, 반환 값을 사용합니다.
+
+#
+
+함수 (Functions) 는 특정 작업을 수행하는 독립적인 코드 모음 형태 입니다.
+
+무슨 동작을 하는지 함수에 특정 이름을 부여할 수 있으며, 해당 이름은 작업을 수행하기 위해 함수를 "호출" 할 때 사용됩니다.
+
+#
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 ***
 
