--- a/Swift Documentation/2.Language Guide/6.Functions.md
+++ b/Swift Documentation/2.Language Guide/6.Functions.md
@@ -10,6 +10,23 @@
 
 #
 
+Swift 의 통합 함수 구문은 파라미터 이름이 없는 단순한 C 스타일 함수부터 각 파라미터에 대한 이름과 인수가 있는 복잡한 Objective-C 스타일 메서드 까지 무엇이든 표현할 수 있을 만큼 충분히 유연합니다.
+
+파라미터는 함수 호출을 단순화 하기 위해 기본값을 제공할 수 있으며 함수 실행이 완료되면 전달된 변수를 수정하는 in-out 파라미터로 전달될 수 있습니다.
+
+#
+
+Swift 의 모든 함수에는 함수의 파라미터 타입과 반환 타입으로 구성된 타입이 있습니다.
+
+이 타입을 Swift 의 다른 타입 처럼 사용할 수 있습니다.
+
+이를 통해 함수를 다른 함수의 파라미터로 쉽게 전달하고 함수에서 함수를 반환할 수 있습니다.
+
+함수는 중첩된 함수 범위내에서 유용한 기능을 캡슐화하기 위해 다른 함수 내에 작성될 수도 있습니다.
+
+<br>
+
+## 함수 정의 및 호출 (Defining and Calling Functions)
 
 
 
