--- a/Swift Documentation/2.Language Guide/6.Functions.md
+++ b/Swift Documentation/2.Language Guide/6.Functions.md
@@ -112,8 +112,61 @@ print(greetAgain(person: "Anna"))
 
 ## 함수 파라미터와 반환값 (Function Parameters and Return Values)
 
+함수 파라미터와 반환값 (Function parameters and return values) 은 Swift 에서 매우 유연합니다.
 
+이름이 지정되지 않은 단일 파라미터가 있는 간단한 유틸리티 함수부터 파라미터 이름과 다양한 파라미터 옵션이 있는 복잡한 함수까지 무엇이든 정의할 수 있습니다.
 
+<br>
+
+### 파라미터가 없는 함수 (Functions Without Parameters)
+
+함수는 입력 파라미터 정의를 강요하지 않습니다.
+
+다음은 호출될 때마다 항상 같은 `String` 메세지를 반환하는 입력 파라미터가 없는 함수입니다.
+
+~~~ swift
+func sayHelloWorld() -> String {
+    return "hello, world"
+}
+print(sayHelloWorld())
+// Prints "hello, world"
+~~~
+
+함수 정의에서는 파라미터를 사용하지 않더라도 함수 이름 뒤에 소괄호가 필요합니다.
+
+함수가 호출될 때 함수 이름 뒤에는 빈 소괄호가 뒤따릅니다.
+
+<br>
+
+### 여러 파라미터가 있는 함수 (Functions With Multiple Parameters)
+
+함수는 여러개의 입력 파라미터를 가질 수 있으며, 파라미터는 함수의 소괄호 안에 콤마로 구분되어 작성됩니다.
+
+#
+
+이 함수는 사람의 이름과 이미 인사를 받았는지 여부를 입력으로 받아 입력된 사람에 따라 적절한 인사말을 반환합니다.
+
+~~~ swift
+func greet(person: String, alreadyGreeted: Bool) -> String {
+    if alreadyGreeted {
+        return greetAgain(person: person)
+    } else {
+        return greet(person: person)
+    }
+}
+print(greet(person: "Tim", alreadyGreeted: true))
+// Prints "Hello again, Tim!"
+~~~
+
+`person` 이라는 레이블이 지정된 `String` 인수값과 `alreadyGreeted` 라는 레이블이 지정된 `Bool` 인수값을 소괄호 안에 콤마로 구분하여 `greet(person:alreadyGreeted:)` 함수로 전달하여 호출합니다.
+
+이전 섹션에서 본 `greet(person:)` 함수와는 기능이 다른 함수입니다.
+
+두 함수 모두 `greet` 으로 시작하는 이름을 가지지만 `greet(person:alreadyGreeted:)` 함수는 2개의 인수를 가지고 `greet(person:)` 함수는 하나의 인수를 가집니다.
+
+<br>
+
+### 반환값이 없는 함수 (Functions Without Return Values)
 
 
 
