--- a/Swift Documentation/2.Language Guide/6.Functions.md
+++ b/Swift Documentation/2.Language Guide/6.Functions.md
@@ -168,10 +168,56 @@ print(greet(person: "Tim", alreadyGreeted: true))
 
 ### 반환값이 없는 함수 (Functions Without Return Values)
 
+함수는 반환 타입 정의를 강요하지 않습니다.
 
+다음은 값을 반환하지 않고 `String` 값을 출력하는 `greet(person:)` 함수 버전입니다.
 
+~~~ swift
+func greet(person: String) {
+    print("Hello, \(person)!")
+}
+greet(person: "Dave")
+// Prints "Hello, Dave!"
+~~~
 
+값을 반환할 필요가 없기 때문에 함수의 정의에는 반환 화살표 (`->`) 와 반환 타입이 포함되지 않습니다.
 
+> Note    
+> 엄밀히 말하면 이 버전의 `greet(person:)` 함수는 반환값을 정의하지 않았지만 여전히 반화값이 있습니다.
+> 반환 타입이 정의되지 않은 함수는 `Void` 타입의 특별한 값을 반환합니다.
+> 이것은 단순히 `()` 로 쓰여진 빈 튜플입니다.
+
+#
+
+함수 호출 시 함수의 반환값을 무시할 수 있습니다.
+
+~~~ swift
+func printAndCount(string: String) -> Int {
+    print(string)
+    return string.count
+}
+func printWithoutCounting(string: String) {
+    let _ = printAndCount(string: string)
+}
+printAndCount(string: "hello, world")
+// prints "hello, world" and returns a value of 12
+printWithoutCounting(string: "hello, world")
+// prints "hello, world" but doesn't return a value
+~~~
+
+첫번째 함수 `printAndCount(string:)` 은 문자열을 출력한 다음 해당 문자 수를 `Int` 로 반환합니다.
+
+두번째 함수 `printWithoutCounting(string:)` 은 첫번째 함수를 호출하지만 반환값을 무시합니다.
+
+두번째 함수가 호출되면 첫번째 함수에 의해 메세지는 출력되지만 반환된 값은 사용되지 않습니다.
+
+> Note    
+> 반환값은 무시할 수 있지만 값을 반환한다고 말하는 함수는 항상 값을 반환할 것입니다.
+> 정의된 반환 타입이 있는 함수는 값을 반환하지 않고 제어가 함수의 끝에서 밖으로 빠져 나오는것을 허락하지 않으며 그렇게 시도하면 컴파일 타임에 에러가 발생합니다.
+
+<br>
+
+### 여러개의 반환값이 있는 함수 (Functions with Multiple Return Values)
 
 
 
