--- a/Swift Documentation/2.Language Guide/6.Functions.md
+++ b/Swift Documentation/2.Language Guide/6.Functions.md
@@ -219,6 +219,59 @@ printWithoutCounting(string: "hello, world")
 
 ### 여러개의 반환값이 있는 함수 (Functions with Multiple Return Values)
 
+튜플 타입을 함수의 반환 타입으로 사용하여 하나의 복합 반환값의 일부러 여러 값을 반환할 수 있습니다.
+
+#
+
+아래 예제에서는 `Int` 값의 배열에서 가장 작은 숫자와 가장 큰 숫자를 찾는 `minMax(array:)` 함수를 정의합니다.
+
+~~~ swift
+func minMax(array: [Int]) -> (min: Int, max: Int) {
+    var currentMin = array[0]
+    var currentMax = array[0]
+    for value in array[1..<array.count] {
+        if value < currentMin {
+            currentMin = value
+        } else if value > currentMax {
+            currentMax = value
+        }
+    }
+    return (currentMin, currentMax)
+}
+~~~
+
+`minMax(array:)` 함수는 2개의 `Int` 값을 포함하는 튜플을 반환합니다.
+
+이 값들은 `min` 과 `max` 로 레이블이 지정되어 함수의 반환값을 쿼리할 때 이름으로 접근할 수 있습니다.
+
+#
+
+`minMax(array:)` 함수의 본문은 `currentMin` 과 `currentMax` 라는 2개의 작업 변수에 배열의 첫번째 정수값을 설정하는 것으로 시작됩니다.
+
+그런 다음 함수는 배열의 나머지 값을 반복하고 각 값이 `currentMin` 과 `currentMax` 의 값보다 더 작거나 더 큰지 확인합니다.
+
+마지막으로 전체 최소값과 최대값은 2개의 `Int` 값의 튜플로 반환됩니다.
+
+#
+
+튜플의 멤버 값은 함수의 반환 타입이므로 점 구문을 사용하여 최소값과 최대값에 접근할 수 있습니다.
+
+~~~ swift
+let bounds = minMax(array: [8, -6, 2, 109, 3, 71])
+print("min is \(bounds.min) and max is \(bounds.max)")
+// Prints "min is -6 and max is 109"
+~~~
+
+튜플의 멤버 이름은 함수의 반환 타입의 일부로 이미 지정되어 있으므로 함수에서 튜플이 반환되는 시점에 이름을 지정할 필요가 없습니다.
+
+<br>
+
+### 옵셔널 튜플 반환 타입 (Optional Tuple Return Types)
+
+
+
+
+
 
 
 
