--- a/Swift Documentation/2.Language Guide/6.Functions.md
+++ b/Swift Documentation/2.Language Guide/6.Functions.md
@@ -268,6 +268,142 @@ print("min is \(bounds.min) and max is \(bounds.max)")
 
 ### 옵셔널 튜플 반환 타입 (Optional Tuple Return Types)
 
+함수에서 반환되는 튜플 타입이 전체 튜플에 대해 "값이 없음" 을 가질 가능성이 있는 경우 옵셔널 튜플 반환 타입을 사용하여 전체 튜플이 `nil` 이 될 수 있다는 사실을 반영할 수 있습니다.
+
+`(Int, Int)?` 또는 `(String, Int, Bool)?` 와 같이 튜플 타입의 닫는 소괄호 뒤에 물음표를 붙여 옵셔널 튜플 반환 타입을 작성합니다.
+
+> Note    
+> `(Int, Int)?` 와 같은 옵셔널 튜플 타입은 `(Int?, Int?)` 와 같이 옵셔널 타입을 가지는 튜플과는 다릅니다.
+> 옵셔널 튜플 타입은 튜플 안에 각각의 값이 옵셔널이 아니라 전체 튜플이 옵셔널이라는 의미입니다.
+
+#
+
+위의 `minMax(array:)` 함수는 2개의 `Int` 값을 포함하는 튜플을 반환합니다.
+
+그러나 이 함수는 배열이 전달될 때 아무런 안정성 검사를 하지 않습니다.
+
+`array` 인수가 빈 배열을 포함하면 위에서 정의된 `minMax(array:)` 함수는 `array[0]` 에 접근할 때 런타임 에러가 발생합니다.
+
+#
+
+빈 배열을 안전하게 처리하려면 `minMax(array:)` 함수는 옵셔널 튜플 반환 타입을 사용하여 함수를 작성하고 배열이 비어있을 때 `nil` 값을 반환합니다.
+
+~~~ swift
+func minMax(array: [Int]) -> (min: Int, max: Int)? {
+    if array.isEmpty { return nil }
+    var currentMin = array[0]
+    var currentMax = array[0]
+    for value in array[1..<array.count] {
+        if value < currentMin {
+            currentMin = value
+        } else if value > currentMax {
+            currentMax = value
+        }
+    }
+    return (currentMin, currentMax)
+}
+~~~
+
+#
+
+옵셔널 바인딩을 통해 이 버전의 `minMax(array:)` 함수가 실제 튜플 값을 반환하는지 아니면 `nil` 을 반환하는지 확인할 수 있습니다.
+
+~~~ swift
+if let bounds = minMax(array: [8, -6, 2, 109, 3, 71]) {
+    print("min is \(bounds.min) and max is \(bounds.max)")
+}
+// Prints "min is -6 and max is 109"
+~~~
+
+<br>
+
+### 암시적 반환을 가진 함수 (Functions With an Implicit Return)
+
+함수의 전체 본문이 단일 표현식인 경우 함수는 암시적으로 해당 표현식을 반환합니다.
+
+예를 들어 아래의 두 함수는 모두 동일한 동작을 합니다.
+
+~~~ swift
+func greeting(for person: String) -> String {
+    "Hello, " + person + "!"
+}
+print(greeting(for: "Dave"))
+// Prints "Hello, Dave!"
+
+
+func anotherGreeting(for person: String) -> String {
+    return "Hello, " + person + "!"
+}
+print(anotherGreeting(for: "Dave"))
+// Prints "Hello, Dave!"
+~~~
+
+`greeting(for:)` 함수의 전체 정의는 인사말 메세지를 반환하는 것입니다.
+
+이것은 더 짧은 형식을 사용할 수 있음을 의미합니다.
+
+`anotherGreeting(for:)` 함수는 더 긴 함수처럼 `return` 키워드를 사용하여 동일한 인사말 메세지를 반환합니다.
+
+단일 `return` 으로 작성된 함수는 `return` 키워드를 생략할 수 있습니다.
+
+#
+
+[짧은 Getter 선언 (Shorthand Getter Declaration)]() 에서 볼 수 있듯이 프로퍼티 getter 또한 암시적 반환을 사용할 수도 있습니다.
+
+> Note    
+> 암시적 반환값으로 작성하는 코드는 일부값을 반환하기 위해 필요합니다.
+> 예를 들어 암시적 반환값으로 `print(13)` 을 사용할 수 없습니다.
+> 그러나 `fatalError("Oh, no!")` 와 같이 Swift 가 암시적 반환이 일어나지 않는 것을 아는 경우에는 사용할 수 있습니다.
+
+<br>
+
+## 함수 인수 레이블 및 파라미터 이름 (Function Argument Labels and Parameter Names)
+
+각 함수 파라미터는 인수 레이블 (argument label) 과 파라미터 이름 (parameter name) 을 가지고 있습니다.
+
+인수 레이블은 함수를 호출할 때 사용됩니다.
+
+각 인수는 함수 호출 시 인수 레이블 다음에 작성합니다.
+
+파라미터 이름은 함수를 구현할 때 사용됩니다.
+
+기본적으로 파라미터는 파라미터 이름을 인수 레이블로 사용합니다.
+
+~~~ swift
+func someFunction(firstParameterName: Int, secondParameterName: Int) {
+    // In the function body, firstParameterName and secondParameterName
+    // refer to the argument values for the first and second parameters.
+}
+someFunction(firstParameterName: 1, secondParameterName: 2)
+~~~
+
+모든 파라미터에는 고유한 이름이 있어야 합니다.
+
+여러 파라미터가 동일한 인수 레이블을 가질 수 있지만 고유한 인수 레이블을 사용하면 코드를 더 쉽게 읽을 수 있습니다.
+
+<br>
+
+### 인수 레이블 지정 (Specifying Argument Labels)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
