--- a/Swift Documentation/2.Language Guide/6.Functions.md
+++ b/Swift Documentation/2.Language Guide/6.Functions.md
@@ -385,7 +385,32 @@ someFunction(firstParameterName: 1, secondParameterName: 2)
 
 ### 인수 레이블 지정 (Specifying Argument Labels)
 
+파라미터 이름 앞에 인수 레이블을 공백으로 구분하여 작성합니다.
 
+~~~ swift
+func someFunction(argumentLabel parameterName: Int) {
+    // In the function body, parameterName refers to the argument value
+    // for that parameter.
+}
+~~~
+
+#
+
+다음은 사람의 이름과 고향을 가져와 인사말을 반환하는 `greet(person:)` 함수의 변형입니다.
+
+~~~ swift
+func greet(person: String, from hometown: String) -> String {
+    return "Hello \(person)!  Glad you could visit from \(hometown)."
+}
+print(greet(person: "Bill", from: "Cupertino"))
+// Prints "Hello Bill!  Glad you could visit from Cupertino."
+~~~
+
+인수 레이블을 사용하면 표현이 풍부하고 문장과 같은 방식으로 함수를 호출하는 동시에 읽기 쉽고 의도가 명확한 함수 본문을 제공할 수 있습니다.
+
+<br>
+
+### 인수 레이블 생략 (Omitting Argument Labels)
 
 
 
