--- a/Swift Documentation/2.Language Guide/6.Functions.md
+++ b/Swift Documentation/2.Language Guide/6.Functions.md
@@ -412,6 +412,21 @@ print(greet(person: "Bill", from: "Cupertino"))
 
 ### 인수 레이블 생략 (Omitting Argument Labels)
 
+파라미터에 대한 인수 레이블을 원하지 않으면 해당 파라미터에 대한 명시적인 인수 레이블 대신 언더바 (`_`) 를 작성합니다.
+
+~~~ swift
+func someFunction(_ firstParameterName: Int, secondParameterName: Int) {
+    // In the function body, firstParameterName and secondParameterName
+    // refer to the argument values for the first and second parameters.
+}
+someFunction(1, secondParameterName: 2)
+~~~
+
+파라미터에 인수 레이블이 있는 경우 함수를 호출할 때 반드시 인수 레이블을 지정 해야 합니다.
+
+<br>
+
+### 파라미터 기본값 (Default Parameter Values)
 
 
 
