--- a/Swift Documentation/2.Language Guide/6.Functions.md
+++ b/Swift Documentation/2.Language Guide/6.Functions.md
@@ -428,8 +428,68 @@ someFunction(1, secondParameterName: 2)
 
 ### 파라미터 기본값 (Default Parameter Values)
 
+해당 파라미터의 타입 뒤에 파라미터 값을 할당하여 함수의 모든 파라미터에 대한 기본값 (default value) 을 정의할 수 있습니다.
 
+기본값이 정의된 경우 함수를 호출할 때 해당 파라미터를 생략할 수 있습니다.
 
+~~~ swift
+func someFunction(parameterWithoutDefault: Int, parameterWithDefault: Int = 12) {
+    // If you omit the second argument when calling this function, then
+    // the value of parameterWithDefault is 12 inside the function body.
+}
+someFunction(parameterWithoutDefault: 3, parameterWithDefault: 6) // parameterWithDefault is 6
+someFunction(parameterWithoutDefault: 4) // parameterWithDefault is 12
+~~~
+
+기본값이 없는 파라미터는 기본값이 있는 파라미터 앞 그리고 함수의 파라미터 목록 시작 부분에 배치 됩니다.
+
+기본값이 없는 파라미터는 일반적으로 함수의 의미에 있어 더 중요합니다.
+
+이를 먼저 작성하면 기본 파라미터가 생략되었는지 여부에 관계없이 동일한 함수가 호출된다는 것을 더 쉽게 인식할 수 있습니다.
+
+<br>
+
+### 가변 파라미터 (Variadic Parameters)
+
+가변 파라미터 (variadic parameter) 는 지정된 타입의 값을 0개 이상 허용합니다.
+
+함수가 호출될 때 파라미터에 여러개의 수 입력 값이 전달될 수 있도록 지정하려면 가변 파라미터를 사용합니다.
+
+가변 파라미터는 파라미터 타입 이름 뒤에 3개의 간격 문자 (`...`) 를 추가하여 작성합니다.
+
+#
+
+가변 파라미터에 전달된 값은 함수 본문 내에서 적절한 타입의 배열로 사용할 수 있습니다.
+
+예를 들어 `numbers` 라는 이름과 `Double...` 타입을 가진 가변 파라미터는 함수 본문 내에서 `[Double]` 타입의 `numbers` 라 불리는 상수 배열로 사용할 수 있습니다.
+
+#
+
+아래 예제는 길이에 관계없이 숫자 목록에 대한 산술 평균을 계산합니다.
+
+~~~ swift
+func arithmeticMean(_ numbers: Double...) -> Double {
+    var total: Double = 0
+    for number in numbers {
+        total += number
+    }
+    return total / Double(numbers.count)
+}
+arithmeticMean(1, 2, 3, 4, 5)
+// returns 3.0, which is the arithmetic mean of these five numbers
+arithmeticMean(3, 8.25, 18.75)
+// returns 10.0, which is the arithmetic mean of these three numbers
+~~~
+
+함수는 여러개의 가변 파라미터를 가질 수 있습니다.
+
+가변 파라미터 뒤에 오는 첫번째 파라미터는 인수 레이블을 가지고 있어야 합니다.
+
+인수 레이블을 사용하면 어떤 인수가 가변 파라미터에 전달되고 어떤 인수가 가변 파라미터 뒤에 오는 파라미터에 전달되는지 명확하게 알 수 있습니다.
+
+<br>
+
+### In-Out 파라미터 (In-Out Parameters)
 
 
 
